@@ -20,24 +20,28 @@
 package org.elasticsearch.persistent;
 
 import com.carrotsearch.hppc.cursors.ObjectCursor;
+import org.elasticsearch.ResourceNotFoundException;
 import org.elasticsearch.Version;
+import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.cluster.ClusterChangedEvent;
 import org.elasticsearch.cluster.ClusterName;
 import org.elasticsearch.cluster.ClusterState;
-import org.elasticsearch.cluster.metadata.IndexMetaData;
-import org.elasticsearch.cluster.metadata.MetaData;
+import org.elasticsearch.cluster.ClusterStateUpdateTask;
+import org.elasticsearch.cluster.metadata.IndexMetadata;
+import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.node.DiscoveryNode;
+import org.elasticsearch.cluster.node.DiscoveryNodeRole;
 import org.elasticsearch.cluster.node.DiscoveryNodes;
 import org.elasticsearch.cluster.routing.RoutingTable;
 import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.UUIDs;
 import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.persistent.PersistentTasksCustomMetaData.Assignment;
-import org.elasticsearch.persistent.PersistentTasksCustomMetaData.PersistentTask;
+import org.elasticsearch.common.unit.TimeValue;
+import org.elasticsearch.persistent.PersistentTasksCustomMetadata.Assignment;
+import org.elasticsearch.persistent.PersistentTasksCustomMetadata.PersistentTask;
 import org.elasticsearch.persistent.TestPersistentTasksPlugin.TestParams;
 import org.elasticsearch.persistent.TestPersistentTasksPlugin.TestPersistentTasksExecutor;
 import org.elasticsearch.persistent.decider.EnableAssignmentDecider;
-import org.elasticsearch.tasks.Task;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.test.VersionUtils;
 import org.elasticsearch.threadpool.TestThreadPool;
@@ -48,10 +52,10 @@ import org.junit.Before;
 import org.junit.BeforeClass;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.BiFunction;
 
 import static java.util.Collections.emptyMap;
@@ -60,10 +64,18 @@ import static org.elasticsearch.persistent.PersistentTasksClusterService.needsRe
 import static org.elasticsearch.persistent.PersistentTasksClusterService.persistentTasksChanged;
 import static org.elasticsearch.persistent.PersistentTasksExecutor.NO_NODE_FOUND;
 import static org.elasticsearch.test.ClusterServiceUtils.createClusterService;
+import static org.elasticsearch.test.ClusterServiceUtils.setState;
 import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.instanceOf;
 import static org.hamcrest.Matchers.lessThanOrEqualTo;
 import static org.hamcrest.Matchers.notNullValue;
 import static org.hamcrest.Matchers.nullValue;
+import static org.hamcrest.core.Is.is;
+import static org.mockito.Matchers.any;
+import static org.mockito.Matchers.anyString;
+import static org.mockito.Mockito.doAnswer;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 public class PersistentTasksClusterServiceTests extends ESTestCase {
 
@@ -71,6 +83,8 @@ public class PersistentTasksClusterServiceTests extends ESTestCase {
     private static ThreadPool threadPool;
     /** Needed by {@link PersistentTasksClusterService} **/
     private ClusterService clusterService;
+
+    private volatile boolean nonClusterStateCondition;
 
     @BeforeClass
     public static void setUpThreadPool() {
@@ -84,7 +98,7 @@ public class PersistentTasksClusterServiceTests extends ESTestCase {
     }
 
     @AfterClass
-    public static void tearDownThreadPool() throws Exception {
+    public static void tearDownThreadPool() {
         terminate(threadPool);
     }
 
@@ -125,12 +139,12 @@ public class PersistentTasksClusterServiceTests extends ESTestCase {
             .build();
 
         boolean unassigned = randomBoolean();
-        PersistentTasksCustomMetaData tasks = PersistentTasksCustomMetaData.builder()
+        PersistentTasksCustomMetadata tasks = PersistentTasksCustomMetadata.builder()
             .addTask("_task_1", TestPersistentTasksExecutor.NAME, null, new Assignment(unassigned ? null : "_node", "_reason"))
             .build();
 
-        MetaData metaData = MetaData.builder()
-            .putCustom(PersistentTasksCustomMetaData.TYPE, tasks)
+        Metadata metadata = Metadata.builder()
+            .putCustom(PersistentTasksCustomMetadata.TYPE, tasks)
             .persistentSettings(Settings.builder()
                     .put(EnableAssignmentDecider.CLUSTER_TASKS_ALLOCATION_ENABLE_SETTING.getKey(), allocation.toString())
                     .build())
@@ -138,7 +152,7 @@ public class PersistentTasksClusterServiceTests extends ESTestCase {
 
         ClusterState previous = ClusterState.builder(new ClusterName("_name"))
             .nodes(nodes)
-            .metaData(metaData)
+            .metadata(metadata)
             .build();
 
         ClusterState current;
@@ -148,7 +162,7 @@ public class PersistentTasksClusterServiceTests extends ESTestCase {
             allocation = randomValueOtherThan(allocation, () -> randomFrom(EnableAssignmentDecider.Allocation.values()));
 
             current = ClusterState.builder(previous)
-                .metaData(MetaData.builder(previous.metaData())
+                .metadata(Metadata.builder(previous.metadata())
                     .persistentSettings(Settings.builder()
                         .put(EnableAssignmentDecider.CLUSTER_TASKS_ALLOCATION_ENABLE_SETTING.getKey(), allocation.toString())
                         .build())
@@ -166,35 +180,70 @@ public class PersistentTasksClusterServiceTests extends ESTestCase {
 
     public void testReassignTasksWithNoTasks() {
         ClusterState clusterState = initialState();
-        assertThat(reassign(clusterState).metaData().custom(PersistentTasksCustomMetaData.TYPE), nullValue());
+        assertThat(reassign(clusterState).metadata().custom(PersistentTasksCustomMetadata.TYPE), nullValue());
     }
 
     public void testReassignConsidersClusterStateUpdates() {
         ClusterState clusterState = initialState();
         ClusterState.Builder builder = ClusterState.builder(clusterState);
-        PersistentTasksCustomMetaData.Builder tasks = PersistentTasksCustomMetaData.builder(
-                clusterState.metaData().custom(PersistentTasksCustomMetaData.TYPE));
+        PersistentTasksCustomMetadata.Builder tasks = PersistentTasksCustomMetadata.builder(
+                clusterState.metadata().custom(PersistentTasksCustomMetadata.TYPE));
         DiscoveryNodes.Builder nodes = DiscoveryNodes.builder(clusterState.nodes());
         addTestNodes(nodes, randomIntBetween(1, 10));
         int numberOfTasks = randomIntBetween(2, 40);
         for (int i = 0; i < numberOfTasks; i++) {
-            addTask(tasks, "assign_one", randomBoolean() ? null : "no_longer_exits");
+            addTask(tasks, "assign_one", randomBoolean() ? null : "no_longer_exists");
         }
 
-        MetaData.Builder metaData = MetaData.builder(clusterState.metaData()).putCustom(PersistentTasksCustomMetaData.TYPE, tasks.build());
-        clusterState = builder.metaData(metaData).nodes(nodes).build();
+        Metadata.Builder metadata = Metadata.builder(clusterState.metadata()).putCustom(PersistentTasksCustomMetadata.TYPE, tasks.build());
+        clusterState = builder.metadata(metadata).nodes(nodes).build();
         ClusterState newClusterState = reassign(clusterState);
 
-        PersistentTasksCustomMetaData tasksInProgress = newClusterState.getMetaData().custom(PersistentTasksCustomMetaData.TYPE);
+        PersistentTasksCustomMetadata tasksInProgress = newClusterState.getMetadata().custom(PersistentTasksCustomMetadata.TYPE);
         assertThat(tasksInProgress, notNullValue());
+    }
 
+    public void testNonClusterStateConditionAssignment() {
+        ClusterState clusterState = initialState();
+        ClusterState.Builder builder = ClusterState.builder(clusterState);
+        PersistentTasksCustomMetadata.Builder tasks = PersistentTasksCustomMetadata.builder(
+            clusterState.metadata().custom(PersistentTasksCustomMetadata.TYPE));
+        DiscoveryNodes.Builder nodes = DiscoveryNodes.builder(clusterState.nodes());
+        addTestNodes(nodes, randomIntBetween(1, 3));
+        addTask(tasks, "assign_based_on_non_cluster_state_condition", null);
+        Metadata.Builder metadata = Metadata.builder(clusterState.metadata()).putCustom(PersistentTasksCustomMetadata.TYPE, tasks.build());
+        clusterState = builder.metadata(metadata).nodes(nodes).build();
+
+        nonClusterStateCondition = false;
+        ClusterState newClusterState = reassign(clusterState);
+
+        PersistentTasksCustomMetadata tasksInProgress = newClusterState.getMetadata().custom(PersistentTasksCustomMetadata.TYPE);
+        assertThat(tasksInProgress, notNullValue());
+        for (PersistentTask<?> task : tasksInProgress.tasks()) {
+            assertThat(task.getExecutorNode(), nullValue());
+            assertThat(task.isAssigned(), equalTo(false));
+            assertThat(task.getAssignment().getExplanation(), equalTo("non-cluster state condition prevents assignment"));
+        }
+        assertThat(tasksInProgress.tasks().size(), equalTo(1));
+
+        nonClusterStateCondition = true;
+        ClusterState finalClusterState = reassign(newClusterState);
+
+        tasksInProgress = finalClusterState.getMetadata().custom(PersistentTasksCustomMetadata.TYPE);
+        assertThat(tasksInProgress, notNullValue());
+        for (PersistentTask<?> task : tasksInProgress.tasks()) {
+            assertThat(task.getExecutorNode(), notNullValue());
+            assertThat(task.isAssigned(), equalTo(true));
+            assertThat(task.getAssignment().getExplanation(), equalTo("test assignment"));
+        }
+        assertThat(tasksInProgress.tasks().size(), equalTo(1));
     }
 
     public void testReassignTasks() {
         ClusterState clusterState = initialState();
         ClusterState.Builder builder = ClusterState.builder(clusterState);
-        PersistentTasksCustomMetaData.Builder tasks = PersistentTasksCustomMetaData.builder(
-                clusterState.metaData().custom(PersistentTasksCustomMetaData.TYPE));
+        PersistentTasksCustomMetadata.Builder tasks = PersistentTasksCustomMetadata.builder(
+                clusterState.metadata().custom(PersistentTasksCustomMetadata.TYPE));
         DiscoveryNodes.Builder nodes = DiscoveryNodes.builder(clusterState.nodes());
         addTestNodes(nodes, randomIntBetween(1, 10));
         int numberOfTasks = randomIntBetween(0, 40);
@@ -202,23 +251,23 @@ public class PersistentTasksClusterServiceTests extends ESTestCase {
             switch (randomInt(2)) {
                 case 0:
                     // add an unassigned task that should get assigned because it's assigned to a non-existing node or unassigned
-                    addTask(tasks, "assign_me", randomBoolean() ? null : "no_longer_exits");
+                    addTask(tasks, "assign_me", randomBoolean() ? null : "no_longer_exists");
                     break;
                 case 1:
                     // add a task assigned to non-existing node that should not get assigned
-                    addTask(tasks, "dont_assign_me", randomBoolean() ? null : "no_longer_exits");
+                    addTask(tasks, "dont_assign_me", randomBoolean() ? null : "no_longer_exists");
                     break;
                 case 2:
-                    addTask(tasks, "assign_one", randomBoolean() ? null : "no_longer_exits");
+                    addTask(tasks, "assign_one", randomBoolean() ? null : "no_longer_exists");
                     break;
 
             }
         }
-        MetaData.Builder metaData = MetaData.builder(clusterState.metaData()).putCustom(PersistentTasksCustomMetaData.TYPE, tasks.build());
-        clusterState = builder.metaData(metaData).nodes(nodes).build();
+        Metadata.Builder metadata = Metadata.builder(clusterState.metadata()).putCustom(PersistentTasksCustomMetadata.TYPE, tasks.build());
+        clusterState = builder.metadata(metadata).nodes(nodes).build();
         ClusterState newClusterState = reassign(clusterState);
 
-        PersistentTasksCustomMetaData tasksInProgress = newClusterState.getMetaData().custom(PersistentTasksCustomMetaData.TYPE);
+        PersistentTasksCustomMetadata tasksInProgress = newClusterState.getMetadata().custom(PersistentTasksCustomMetadata.TYPE);
         assertThat(tasksInProgress, notNullValue());
 
         assertThat("number of tasks shouldn't change as a result or reassignment",
@@ -233,7 +282,7 @@ public class PersistentTasksClusterServiceTests extends ESTestCase {
                     assertThat(task.getExecutorNode(), notNullValue());
                     assertThat(task.isAssigned(), equalTo(true));
                     if (clusterState.nodes().nodeExists(task.getExecutorNode()) == false) {
-                        logger.info(clusterState.metaData().custom(PersistentTasksCustomMetaData.TYPE).toString());
+                        logger.info(clusterState.metadata().custom(PersistentTasksCustomMetadata.TYPE).toString());
                     }
                     assertThat("task should be assigned to a node that is in the cluster, was assigned to " + task.getExecutorNode(),
                             clusterState.nodes().nodeExists(task.getExecutorNode()), equalTo(true));
@@ -284,13 +333,13 @@ public class PersistentTasksClusterServiceTests extends ESTestCase {
             .nodes(nodes)
             .build();
 
-        PersistentTasksCustomMetaData tasks = PersistentTasksCustomMetaData.builder()
+        PersistentTasksCustomMetadata tasks = PersistentTasksCustomMetadata.builder()
             .addTask("_task_1", "test", null, new Assignment(null, "_reason"))
             .build();
 
         ClusterState current = ClusterState.builder(new ClusterName("_name"))
             .nodes(nodes)
-            .metaData(MetaData.builder().putCustom(PersistentTasksCustomMetaData.TYPE, tasks))
+            .metadata(Metadata.builder().putCustom(PersistentTasksCustomMetadata.TYPE, tasks))
             .build();
 
         assertTrue("persistent tasks changed (task added)",
@@ -303,7 +352,7 @@ public class PersistentTasksClusterServiceTests extends ESTestCase {
             .add(new DiscoveryNode("_node_2", buildNewFakeTransportAddress(), Version.CURRENT))
             .build();
 
-        PersistentTasksCustomMetaData previousTasks = PersistentTasksCustomMetaData.builder()
+        PersistentTasksCustomMetadata previousTasks = PersistentTasksCustomMetadata.builder()
             .addTask("_task_1", "test", null, new Assignment("_node_1", "_reason"))
             .addTask("_task_2", "test", null, new Assignment("_node_1", "_reason"))
             .addTask("_task_3", "test", null, new Assignment("_node_2", "_reason"))
@@ -311,17 +360,17 @@ public class PersistentTasksClusterServiceTests extends ESTestCase {
 
         ClusterState previous = ClusterState.builder(new ClusterName("_name"))
             .nodes(nodes)
-            .metaData(MetaData.builder().putCustom(PersistentTasksCustomMetaData.TYPE, previousTasks))
+            .metadata(Metadata.builder().putCustom(PersistentTasksCustomMetadata.TYPE, previousTasks))
             .build();
 
-        PersistentTasksCustomMetaData currentTasks = PersistentTasksCustomMetaData.builder()
+        PersistentTasksCustomMetadata currentTasks = PersistentTasksCustomMetadata.builder()
             .addTask("_task_1", "test", null, new Assignment("_node_1", "_reason"))
             .addTask("_task_3", "test", null, new Assignment("_node_2", "_reason"))
             .build();
 
         ClusterState current = ClusterState.builder(new ClusterName("_name"))
             .nodes(nodes)
-            .metaData(MetaData.builder().putCustom(PersistentTasksCustomMetaData.TYPE, currentTasks))
+            .metadata(Metadata.builder().putCustom(PersistentTasksCustomMetadata.TYPE, currentTasks))
             .build();
 
         assertTrue("persistent tasks changed (task removed)",
@@ -334,24 +383,24 @@ public class PersistentTasksClusterServiceTests extends ESTestCase {
             .add(new DiscoveryNode("_node_2", buildNewFakeTransportAddress(), Version.CURRENT))
             .build();
 
-        PersistentTasksCustomMetaData previousTasks = PersistentTasksCustomMetaData.builder()
+        PersistentTasksCustomMetadata previousTasks = PersistentTasksCustomMetadata.builder()
             .addTask("_task_1", "test", null, new Assignment("_node_1", ""))
             .addTask("_task_2", "test", null, new Assignment(null, "unassigned"))
             .build();
 
         ClusterState previous = ClusterState.builder(new ClusterName("_name"))
             .nodes(nodes)
-            .metaData(MetaData.builder().putCustom(PersistentTasksCustomMetaData.TYPE, previousTasks))
+            .metadata(Metadata.builder().putCustom(PersistentTasksCustomMetadata.TYPE, previousTasks))
             .build();
 
-        PersistentTasksCustomMetaData currentTasks = PersistentTasksCustomMetaData.builder()
+        PersistentTasksCustomMetadata currentTasks = PersistentTasksCustomMetadata.builder()
             .addTask("_task_1", "test", null, new Assignment("_node_1", ""))
             .addTask("_task_2", "test", null, new Assignment("_node_2", ""))
             .build();
 
         ClusterState current = ClusterState.builder(new ClusterName("_name"))
             .nodes(nodes)
-            .metaData(MetaData.builder().putCustom(PersistentTasksCustomMetaData.TYPE, currentTasks))
+            .metadata(Metadata.builder().putCustom(PersistentTasksCustomMetadata.TYPE, currentTasks))
             .build();
 
         assertTrue("persistent tasks changed (task assigned)",
@@ -367,6 +416,130 @@ public class PersistentTasksClusterServiceTests extends ESTestCase {
         assertTrue(needsReassignment(new Assignment(null, "unassigned"), nodes));
         assertTrue(needsReassignment(new Assignment("_node_left", "assigned to a node that left"), nodes));
         assertFalse(needsReassignment(new Assignment("_node_1", "assigned"), nodes));
+    }
+
+    public void testPeriodicRecheck() throws Exception {
+        ClusterState initialState = initialState();
+        ClusterState.Builder builder = ClusterState.builder(initialState);
+        PersistentTasksCustomMetadata.Builder tasks = PersistentTasksCustomMetadata.builder(
+            initialState.metadata().custom(PersistentTasksCustomMetadata.TYPE));
+        DiscoveryNodes.Builder nodes = DiscoveryNodes.builder(initialState.nodes());
+        addTestNodes(nodes, randomIntBetween(1, 3));
+        addTask(tasks, "assign_based_on_non_cluster_state_condition", null);
+        Metadata.Builder metadata = Metadata.builder(initialState.metadata()).putCustom(PersistentTasksCustomMetadata.TYPE, tasks.build());
+        ClusterState clusterState = builder.metadata(metadata).nodes(nodes).build();
+
+        nonClusterStateCondition = false;
+
+        boolean shouldSimulateFailure = randomBoolean();
+        ClusterService recheckTestClusterService = createRecheckTestClusterService(clusterState, shouldSimulateFailure);
+        PersistentTasksClusterService service = createService(recheckTestClusterService,
+            (params, currentState) -> assignBasedOnNonClusterStateCondition(currentState.nodes()));
+
+        ClusterChangedEvent event = new ClusterChangedEvent("test", clusterState, initialState);
+        service.clusterChanged(event);
+        ClusterState newClusterState = recheckTestClusterService.state();
+
+        {
+            PersistentTasksCustomMetadata tasksInProgress = newClusterState.getMetadata().custom(PersistentTasksCustomMetadata.TYPE);
+            assertThat(tasksInProgress, notNullValue());
+            for (PersistentTask<?> task : tasksInProgress.tasks()) {
+                assertThat(task.getExecutorNode(), nullValue());
+                assertThat(task.isAssigned(), equalTo(false));
+                assertThat(task.getAssignment().getExplanation(), equalTo(shouldSimulateFailure ?
+                    "explanation: assign_based_on_non_cluster_state_condition" : "non-cluster state condition prevents assignment"));
+            }
+            assertThat(tasksInProgress.tasks().size(), equalTo(1));
+        }
+
+        nonClusterStateCondition = true;
+        service.setRecheckInterval(TimeValue.timeValueMillis(1));
+
+        assertBusy(() -> {
+            PersistentTasksCustomMetadata tasksInProgress =
+                recheckTestClusterService.state().getMetadata().custom(PersistentTasksCustomMetadata.TYPE);
+            assertThat(tasksInProgress, notNullValue());
+            for (PersistentTask<?> task : tasksInProgress.tasks()) {
+                assertThat(task.getExecutorNode(), notNullValue());
+                assertThat(task.isAssigned(), equalTo(true));
+                assertThat(task.getAssignment().getExplanation(), equalTo("test assignment"));
+            }
+            assertThat(tasksInProgress.tasks().size(), equalTo(1));
+        });
+    }
+
+    public void testUnassignTask() {
+        ClusterState clusterState = initialState();
+        ClusterState.Builder builder = ClusterState.builder(clusterState);
+        PersistentTasksCustomMetadata.Builder tasks = PersistentTasksCustomMetadata.builder(
+            clusterState.metadata().custom(PersistentTasksCustomMetadata.TYPE));
+        DiscoveryNodes.Builder nodes = DiscoveryNodes.builder()
+            .add(new DiscoveryNode("_node_1", buildNewFakeTransportAddress(), Version.CURRENT))
+            .localNodeId("_node_1")
+            .masterNodeId("_node_1")
+            .add(new DiscoveryNode("_node_2", buildNewFakeTransportAddress(), Version.CURRENT));
+
+        String unassignedId = addTask(tasks, "unassign", "_node_2");
+
+        Metadata.Builder metadata = Metadata.builder(clusterState.metadata()).putCustom(PersistentTasksCustomMetadata.TYPE, tasks.build());
+        clusterState = builder.metadata(metadata).nodes(nodes).build();
+        setState(clusterService, clusterState);
+        PersistentTasksClusterService service = createService((params, currentState) ->
+            new Assignment("_node_2", "test"));
+        service.unassignPersistentTask(unassignedId, tasks.getLastAllocationId(), "unassignment test", ActionListener.wrap(
+            task -> {
+                assertThat(task.getAssignment().getExecutorNode(), is(nullValue()));
+                assertThat(task.getId(), equalTo(unassignedId));
+                assertThat(task.getAssignment().getExplanation(), equalTo("unassignment test"));
+            },
+            e -> fail()
+        ));
+    }
+
+    public void testUnassignNonExistentTask() {
+        ClusterState clusterState = initialState();
+        ClusterState.Builder builder = ClusterState.builder(clusterState);
+        PersistentTasksCustomMetadata.Builder tasks = PersistentTasksCustomMetadata.builder(
+            clusterState.metadata().custom(PersistentTasksCustomMetadata.TYPE));
+        DiscoveryNodes.Builder nodes = DiscoveryNodes.builder()
+            .add(new DiscoveryNode("_node_1", buildNewFakeTransportAddress(), Version.CURRENT))
+            .localNodeId("_node_1")
+            .masterNodeId("_node_1")
+            .add(new DiscoveryNode("_node_2", buildNewFakeTransportAddress(), Version.CURRENT));
+
+        Metadata.Builder metadata = Metadata.builder(clusterState.metadata()).putCustom(PersistentTasksCustomMetadata.TYPE, tasks.build());
+        clusterState = builder.metadata(metadata).nodes(nodes).build();
+        setState(clusterService, clusterState);
+        PersistentTasksClusterService service = createService((params, currentState) ->
+            new Assignment("_node_2", "test"));
+        service.unassignPersistentTask("missing-task", tasks.getLastAllocationId(), "unassignment test", ActionListener.wrap(
+            task -> fail(),
+            e -> assertThat(e, instanceOf(ResourceNotFoundException.class))
+        ));
+    }
+
+    private ClusterService createRecheckTestClusterService(ClusterState initialState, boolean shouldSimulateFailure) {
+        AtomicBoolean testFailureNextTime = new AtomicBoolean(shouldSimulateFailure);
+        AtomicReference<ClusterState> state = new AtomicReference<>(initialState);
+        ClusterService recheckTestClusterService = mock(ClusterService.class);
+        when(recheckTestClusterService.getClusterSettings()).thenReturn(clusterService.getClusterSettings());
+        doAnswer(invocationOnMock -> state.get().getNodes().getLocalNode()).when(recheckTestClusterService).localNode();
+        doAnswer(invocationOnMock -> state.get()).when(recheckTestClusterService).state();
+        doAnswer(invocationOnMock -> {
+            @SuppressWarnings("unchecked")
+            ClusterStateUpdateTask task = (ClusterStateUpdateTask) invocationOnMock.getArguments()[1];
+            ClusterState before = state.get();
+            ClusterState after = task.execute(before);
+            if (testFailureNextTime.compareAndSet(true, false)) {
+                task.onFailure("testing failure", new RuntimeException("foo"));
+            } else {
+                state.set(after);
+                task.clusterStateProcessed("test", before, after);
+            }
+            return null;
+        }).when(recheckTestClusterService).submitStateUpdateTask(anyString(), any(ClusterStateUpdateTask.class));
+
+        return recheckTestClusterService;
     }
 
     private void addTestNodes(DiscoveryNodes.Builder nodes, int nonLocalNodesCount) {
@@ -388,6 +561,8 @@ public class PersistentTasksClusterServiceTests extends ESTestCase {
                     return null;
                 case "assign_one":
                     return assignOnlyOneTaskAtATime(currentState);
+                case "assign_based_on_non_cluster_state_condition":
+                    return assignBasedOnNonClusterStateCondition(currentState.nodes());
                 default:
                     fail("unknown param " + testParams.getTestParam());
             }
@@ -399,13 +574,21 @@ public class PersistentTasksClusterServiceTests extends ESTestCase {
 
     private Assignment assignOnlyOneTaskAtATime(ClusterState clusterState) {
         DiscoveryNodes nodes = clusterState.nodes();
-        PersistentTasksCustomMetaData tasksInProgress = clusterState.getMetaData().custom(PersistentTasksCustomMetaData.TYPE);
+        PersistentTasksCustomMetadata tasksInProgress = clusterState.getMetadata().custom(PersistentTasksCustomMetadata.TYPE);
         if (tasksInProgress.findTasks(TestPersistentTasksExecutor.NAME, task ->
                 "assign_one".equals(((TestParams) task.getParams()).getTestParam()) &&
                         nodes.nodeExists(task.getExecutorNode())).isEmpty()) {
             return randomNodeAssignment(clusterState.nodes());
         } else {
             return new Assignment(null, "only one task can be assigned at a time");
+        }
+    }
+
+    private Assignment assignBasedOnNonClusterStateCondition(DiscoveryNodes nodes) {
+        if (nonClusterStateCondition) {
+            return randomNodeAssignment(nodes);
+        } else {
+            return new Assignment(null, "non-cluster state condition prevents assignment");
         }
     }
 
@@ -429,12 +612,12 @@ public class PersistentTasksClusterServiceTests extends ESTestCase {
         return "nodes_changed: " + event.nodesChanged() +
                 " nodes_removed:" + event.nodesRemoved() +
                 " routing_table_changed:" + event.routingTableChanged() +
-                " tasks: " + event.state().metaData().custom(PersistentTasksCustomMetaData.TYPE);
+                " tasks: " + event.state().metadata().custom(PersistentTasksCustomMetadata.TYPE);
     }
 
     private ClusterState significantChange(ClusterState clusterState) {
         ClusterState.Builder builder = ClusterState.builder(clusterState);
-        PersistentTasksCustomMetaData tasks = clusterState.getMetaData().custom(PersistentTasksCustomMetaData.TYPE);
+        PersistentTasksCustomMetadata tasks = clusterState.getMetadata().custom(PersistentTasksCustomMetadata.TYPE);
         if (tasks != null) {
             if (randomBoolean()) {
                 for (PersistentTask<?> task : tasks.tasks()) {
@@ -452,11 +635,11 @@ public class PersistentTasksClusterServiceTests extends ESTestCase {
             // we don't have any unassigned tasks - add some
             if (randomBoolean()) {
                 logger.info("added random task");
-                addRandomTask(builder, MetaData.builder(clusterState.metaData()), PersistentTasksCustomMetaData.builder(tasks), null);
+                addRandomTask(builder, Metadata.builder(clusterState.metadata()), PersistentTasksCustomMetadata.builder(tasks), null);
                 tasksOrNodesChanged = true;
             } else {
                 logger.info("added unassignable task with custom assignment message");
-                addRandomTask(builder, MetaData.builder(clusterState.metaData()), PersistentTasksCustomMetaData.builder(tasks),
+                addRandomTask(builder, Metadata.builder(clusterState.metadata()), PersistentTasksCustomMetadata.builder(tasks),
                         new Assignment(null, "change me"), "never_assign");
                 tasksOrNodesChanged = true;
             }
@@ -471,18 +654,18 @@ public class PersistentTasksClusterServiceTests extends ESTestCase {
         if (tasksOrNodesChanged == false) {
             // change routing table to simulate a change
             logger.info("changed routing table");
-            MetaData.Builder metaData = MetaData.builder(clusterState.metaData());
+            Metadata.Builder metadata = Metadata.builder(clusterState.metadata());
             RoutingTable.Builder routingTable = RoutingTable.builder(clusterState.routingTable());
-            changeRoutingTable(metaData, routingTable);
-            builder.metaData(metaData).routingTable(routingTable.build());
+            changeRoutingTable(metadata, routingTable);
+            builder.metadata(metadata).routingTable(routingTable.build());
         }
         return builder.build();
     }
 
-    private PersistentTasksCustomMetaData removeTasksWithChangingAssignment(PersistentTasksCustomMetaData tasks) {
+    private PersistentTasksCustomMetadata removeTasksWithChangingAssignment(PersistentTasksCustomMetadata tasks) {
         if (tasks != null) {
             boolean changed = false;
-            PersistentTasksCustomMetaData.Builder tasksBuilder = PersistentTasksCustomMetaData.builder(tasks);
+            PersistentTasksCustomMetadata.Builder tasksBuilder = PersistentTasksCustomMetadata.builder(tasks);
             for (PersistentTask<?> task : tasks.tasks()) {
                 // Remove all unassigned tasks that cause changing assignments they might trigger a significant change
                 if ("never_assign".equals(((TestParams) task.getParams()).getTestParam()) &&
@@ -501,9 +684,9 @@ public class PersistentTasksClusterServiceTests extends ESTestCase {
 
     private ClusterState insignificantChange(ClusterState clusterState) {
         ClusterState.Builder builder = ClusterState.builder(clusterState);
-        PersistentTasksCustomMetaData tasks = clusterState.getMetaData().custom(PersistentTasksCustomMetaData.TYPE);
+        PersistentTasksCustomMetadata tasks = clusterState.getMetadata().custom(PersistentTasksCustomMetadata.TYPE);
         tasks = removeTasksWithChangingAssignment(tasks);
-        PersistentTasksCustomMetaData.Builder tasksBuilder = PersistentTasksCustomMetaData.builder(tasks);
+        PersistentTasksCustomMetadata.Builder tasksBuilder = PersistentTasksCustomMetadata.builder(tasks);
 
         if (randomBoolean()) {
             if (hasAssignableTasks(tasks, clusterState.nodes()) == false) {
@@ -514,15 +697,15 @@ public class PersistentTasksClusterServiceTests extends ESTestCase {
                 }
                 if (randomBoolean()) {
                     logger.info("added random unassignable task");
-                    addRandomTask(builder, MetaData.builder(clusterState.metaData()), tasksBuilder, NO_NODE_FOUND, "never_assign");
+                    addRandomTask(builder, Metadata.builder(clusterState.metadata()), tasksBuilder, NO_NODE_FOUND, "never_assign");
                     return builder.build();
                 }
                 logger.info("changed routing table");
-                MetaData.Builder metaData = MetaData.builder(clusterState.metaData());
-                metaData.putCustom(PersistentTasksCustomMetaData.TYPE, tasksBuilder.build());
+                Metadata.Builder metadata = Metadata.builder(clusterState.metadata());
+                metadata.putCustom(PersistentTasksCustomMetadata.TYPE, tasksBuilder.build());
                 RoutingTable.Builder routingTable = RoutingTable.builder(clusterState.routingTable());
-                changeRoutingTable(metaData, routingTable);
-                builder.metaData(metaData).routingTable(routingTable.build());
+                changeRoutingTable(metadata, routingTable);
+                builder.metadata(metadata).routingTable(routingTable.build());
                 return builder.build();
             }
         }
@@ -540,13 +723,13 @@ public class PersistentTasksClusterServiceTests extends ESTestCase {
             // clear the task
             if (randomBoolean()) {
                 logger.info("removed all tasks");
-                MetaData.Builder metaData = MetaData.builder(clusterState.metaData()).putCustom(PersistentTasksCustomMetaData.TYPE,
-                        PersistentTasksCustomMetaData.builder().build());
-                return builder.metaData(metaData).build();
+                Metadata.Builder metadata = Metadata.builder(clusterState.metadata()).putCustom(PersistentTasksCustomMetadata.TYPE,
+                        PersistentTasksCustomMetadata.builder().build());
+                return builder.metadata(metadata).build();
             } else {
                 logger.info("set task custom to null");
-                MetaData.Builder metaData = MetaData.builder(clusterState.metaData()).removeCustom(PersistentTasksCustomMetaData.TYPE);
-                return builder.metaData(metaData).build();
+                Metadata.Builder metadata = Metadata.builder(clusterState.metadata()).removeCustom(PersistentTasksCustomMetadata.TYPE);
+                return builder.metadata(metadata).build();
             }
         }
         logger.info("removed all unassigned tasks and changed routing table");
@@ -558,17 +741,17 @@ public class PersistentTasksClusterServiceTests extends ESTestCase {
             }
         }
         // Just add a random index - that shouldn't change anything
-        IndexMetaData indexMetaData = IndexMetaData.builder(randomAlphaOfLength(10))
+        IndexMetadata indexMetadata = IndexMetadata.builder(randomAlphaOfLength(10))
                 .settings(Settings.builder().put("index.version.created", VersionUtils.randomVersion(random())))
                 .numberOfShards(1)
                 .numberOfReplicas(1)
                 .build();
-        MetaData.Builder metaData = MetaData.builder(clusterState.metaData()).put(indexMetaData, false)
-                .putCustom(PersistentTasksCustomMetaData.TYPE, tasksBuilder.build());
-        return builder.metaData(metaData).build();
+        Metadata.Builder metadata = Metadata.builder(clusterState.metadata()).put(indexMetadata, false)
+                .putCustom(PersistentTasksCustomMetadata.TYPE, tasksBuilder.build());
+        return builder.metadata(metadata).build();
     }
 
-    private boolean hasAssignableTasks(PersistentTasksCustomMetaData tasks, DiscoveryNodes discoveryNodes) {
+    private boolean hasAssignableTasks(PersistentTasksCustomMetadata tasks, DiscoveryNodes discoveryNodes) {
         if (tasks == null || tasks.tasks().isEmpty()) {
             return false;
         }
@@ -580,42 +763,47 @@ public class PersistentTasksClusterServiceTests extends ESTestCase {
         });
     }
 
-    private boolean hasTasksAssignedTo(PersistentTasksCustomMetaData tasks, String nodeId) {
+    private boolean hasTasksAssignedTo(PersistentTasksCustomMetadata tasks, String nodeId) {
         return tasks != null && tasks.tasks().stream().anyMatch(
                 task -> nodeId.equals(task.getExecutorNode())) == false;
     }
 
     private ClusterState.Builder addRandomTask(ClusterState.Builder clusterStateBuilder,
-                                               MetaData.Builder metaData, PersistentTasksCustomMetaData.Builder tasks,
+                                               Metadata.Builder metadata, PersistentTasksCustomMetadata.Builder tasks,
                                                String node) {
-        return addRandomTask(clusterStateBuilder, metaData, tasks, new Assignment(node, randomAlphaOfLength(10)),
+        return addRandomTask(clusterStateBuilder, metadata, tasks, new Assignment(node, randomAlphaOfLength(10)),
                 randomAlphaOfLength(10));
     }
 
     private ClusterState.Builder addRandomTask(ClusterState.Builder clusterStateBuilder,
-                                               MetaData.Builder metaData, PersistentTasksCustomMetaData.Builder tasks,
+                                               Metadata.Builder metadata, PersistentTasksCustomMetadata.Builder tasks,
                                                Assignment assignment, String param) {
-        return clusterStateBuilder.metaData(metaData.putCustom(PersistentTasksCustomMetaData.TYPE,
+        return clusterStateBuilder.metadata(metadata.putCustom(PersistentTasksCustomMetadata.TYPE,
                 tasks.addTask(UUIDs.base64UUID(), TestPersistentTasksExecutor.NAME, new TestParams(param), assignment).build()));
     }
 
-    private void addTask(PersistentTasksCustomMetaData.Builder tasks, String param, String node) {
-        tasks.addTask(UUIDs.base64UUID(), TestPersistentTasksExecutor.NAME, new TestParams(param),
+    private String addTask(PersistentTasksCustomMetadata.Builder tasks, String param, String node) {
+        String id = UUIDs.base64UUID();
+        tasks.addTask(id, TestPersistentTasksExecutor.NAME, new TestParams(param),
                 new Assignment(node, "explanation: " + param));
+        return id;
     }
 
     private DiscoveryNode newNode(String nodeId) {
-        return new DiscoveryNode(nodeId, buildNewFakeTransportAddress(), emptyMap(),
-                Collections.unmodifiableSet(new HashSet<>(Arrays.asList(DiscoveryNode.Role.MASTER, DiscoveryNode.Role.DATA))),
+        return new DiscoveryNode(
+                nodeId,
+                buildNewFakeTransportAddress(),
+                emptyMap(),
+                Set.of(DiscoveryNodeRole.MASTER_ROLE, DiscoveryNodeRole.DATA_ROLE),
                 Version.CURRENT);
     }
 
     private ClusterState initialState() {
-        MetaData.Builder metaData = MetaData.builder();
+        Metadata.Builder metadata = Metadata.builder();
         RoutingTable.Builder routingTable = RoutingTable.builder();
         int randomIndices = randomIntBetween(0, 5);
         for (int i = 0; i < randomIndices; i++) {
-            changeRoutingTable(metaData, routingTable);
+            changeRoutingTable(metadata, routingTable);
         }
 
         DiscoveryNodes.Builder nodes = DiscoveryNodes.builder();
@@ -624,35 +812,41 @@ public class PersistentTasksClusterServiceTests extends ESTestCase {
         nodes.masterNodeId("this_node");
 
         return ClusterState.builder(ClusterName.DEFAULT)
-                .metaData(metaData)
+                .nodes(nodes)
+                .metadata(metadata)
                 .routingTable(routingTable.build())
                 .build();
     }
 
-    private void changeRoutingTable(MetaData.Builder metaData, RoutingTable.Builder routingTable) {
-        IndexMetaData indexMetaData = IndexMetaData.builder(randomAlphaOfLength(10))
+    private void changeRoutingTable(Metadata.Builder metadata, RoutingTable.Builder routingTable) {
+        IndexMetadata indexMetadata = IndexMetadata.builder(randomAlphaOfLength(10))
                 .settings(Settings.builder().put("index.version.created", VersionUtils.randomVersion(random())))
                 .numberOfShards(1)
                 .numberOfReplicas(1)
                 .build();
-        metaData.put(indexMetaData, false);
-        routingTable.addAsNew(indexMetaData);
+        metadata.put(indexMetadata, false);
+        routingTable.addAsNew(indexMetadata);
     }
 
     /** Creates a PersistentTasksClusterService with a single PersistentTasksExecutor implemented by a BiFunction **/
     private <P extends PersistentTaskParams> PersistentTasksClusterService createService(final BiFunction<P, ClusterState, Assignment> fn) {
-        PersistentTasksExecutorRegistry registry = new PersistentTasksExecutorRegistry(Settings.EMPTY,
-            singleton(new PersistentTasksExecutor<P>(Settings.EMPTY, TestPersistentTasksExecutor.NAME, null) {
+        return createService(clusterService, fn);
+    }
+
+    private <P extends PersistentTaskParams> PersistentTasksClusterService createService(ClusterService clusterService,
+                                                                                         final BiFunction<P, ClusterState, Assignment> fn) {
+        PersistentTasksExecutorRegistry registry = new PersistentTasksExecutorRegistry(
+            singleton(new PersistentTasksExecutor<P>(TestPersistentTasksExecutor.NAME, null) {
                 @Override
                 public Assignment getAssignment(P params, ClusterState clusterState) {
                     return fn.apply(params, clusterState);
                 }
 
                 @Override
-                protected void nodeOperation(AllocatedPersistentTask task, P params, Task.Status status) {
+                protected void nodeOperation(AllocatedPersistentTask task, P params, PersistentTaskState state) {
                     throw new UnsupportedOperationException();
                 }
             }));
-        return new PersistentTasksClusterService(Settings.EMPTY, registry, clusterService);
+        return new PersistentTasksClusterService(Settings.EMPTY, registry, clusterService, threadPool);
     }
 }
