@@ -21,12 +21,13 @@ package org.elasticsearch.search.fetch.subphase.highlight;
 
 import org.apache.lucene.search.Query;
 import org.elasticsearch.Version;
-import org.elasticsearch.cluster.metadata.IndexMetaData;
+import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.common.ParsingException;
 import org.elasticsearch.common.io.stream.BytesStreamOutput;
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.settings.Settings;
+import org.elasticsearch.common.util.BigArrays;
 import org.elasticsearch.common.xcontent.NamedXContentRegistry;
 import org.elasticsearch.common.xcontent.ToXContent;
 import org.elasticsearch.common.xcontent.XContentBuilder;
@@ -84,7 +85,7 @@ public class HighlightBuilderTests extends ESTestCase {
      */
     @BeforeClass
     public static void init() {
-        SearchModule searchModule = new SearchModule(Settings.EMPTY, false, emptyList());
+        SearchModule searchModule = new SearchModule(Settings.EMPTY, emptyList());
         namedWriteableRegistry = new NamedWriteableRegistry(searchModule.getNamedWriteables());
         xContentRegistry = new NamedXContentRegistry(searchModule.getNamedXContents());
     }
@@ -139,17 +140,18 @@ public class HighlightBuilderTests extends ESTestCase {
                 shuffled = shuffleXContent(builder, "fields");
             }
 
-            XContentParser parser = createParser(shuffled);
-            parser.nextToken();
-            HighlightBuilder secondHighlightBuilder;
-            try {
-                secondHighlightBuilder = HighlightBuilder.fromXContent(parser);
-            } catch (RuntimeException e) {
-                throw new RuntimeException("Error parsing " + highlightBuilder, e);
+            try (XContentParser parser = createParser(shuffled)) {
+                parser.nextToken();
+                HighlightBuilder secondHighlightBuilder;
+                try {
+                    secondHighlightBuilder = HighlightBuilder.fromXContent(parser);
+                } catch (RuntimeException e) {
+                    throw new RuntimeException("Error parsing " + highlightBuilder, e);
+                }
+                assertNotSame(highlightBuilder, secondHighlightBuilder);
+                assertEquals(highlightBuilder, secondHighlightBuilder);
+                assertEquals(highlightBuilder.hashCode(), secondHighlightBuilder.hashCode());
             }
-            assertNotSame(highlightBuilder, secondHighlightBuilder);
-            assertEquals(highlightBuilder, secondHighlightBuilder);
-            assertEquals(highlightBuilder.hashCode(), secondHighlightBuilder.hashCode());
         }
     }
 
@@ -158,10 +160,10 @@ public class HighlightBuilderTests extends ESTestCase {
      */
     public void testUnknownArrayNameExpection() throws IOException {
         {
-            IllegalArgumentException e = expectParseThrows(IllegalArgumentException.class, "{\n" +
+            XContentParseException e = expectParseThrows(XContentParseException.class, "{\n" +
                     "    \"bad_fieldname\" : [ \"field1\" 1 \"field2\" ]\n" +
                     "}\n");
-            assertEquals("[highlight] unknown field [bad_fieldname], parser not found", e.getMessage());
+            assertEquals("[2:5] [highlight] unknown field [bad_fieldname]", e.getMessage());
         }
 
         {
@@ -174,13 +176,14 @@ public class HighlightBuilderTests extends ESTestCase {
                     "}\n");
             assertThat(e.getMessage(), containsString("[highlight] failed to parse field [fields]"));
             assertThat(e.getCause().getMessage(), containsString("[fields] failed to parse field [body]"));
-            assertEquals("[highlight_field] unknown field [bad_fieldname], parser not found", e.getCause().getCause().getMessage());
+            assertEquals("[4:9] [highlight_field] unknown field [bad_fieldname]", e.getCause().getCause().getMessage());
         }
     }
 
     private <T extends Throwable> T expectParseThrows(Class<T> exceptionClass, String highlightElement) throws IOException {
-        XContentParser parser = createParser(JsonXContent.jsonXContent, highlightElement);
-        return expectThrows(exceptionClass, () -> HighlightBuilder.fromXContent(parser));
+        try (XContentParser parser = createParser(JsonXContent.jsonXContent, highlightElement)) {
+            return expectThrows(exceptionClass, () -> HighlightBuilder.fromXContent(parser));
+        }
     }
 
     /**
@@ -188,10 +191,10 @@ public class HighlightBuilderTests extends ESTestCase {
      */
     public void testUnknownFieldnameExpection() throws IOException {
         {
-            IllegalArgumentException e = expectParseThrows(IllegalArgumentException.class, "{\n" +
+            XContentParseException e = expectParseThrows(XContentParseException.class, "{\n" +
                     "    \"bad_fieldname\" : \"value\"\n" +
                     "}\n");
-            assertEquals("[highlight] unknown field [bad_fieldname], parser not found", e.getMessage());
+            assertEquals("[2:5] [highlight] unknown field [bad_fieldname]", e.getMessage());
         }
 
         {
@@ -204,7 +207,7 @@ public class HighlightBuilderTests extends ESTestCase {
                     "}\n");
             assertThat(e.getMessage(), containsString("[highlight] failed to parse field [fields]"));
             assertThat(e.getCause().getMessage(), containsString("[fields] failed to parse field [body]"));
-            assertEquals("[highlight_field] unknown field [bad_fieldname], parser not found", e.getCause().getCause().getMessage());
+            assertEquals("[4:9] [highlight_field] unknown field [bad_fieldname]", e.getCause().getCause().getMessage());
         }
     }
 
@@ -213,10 +216,10 @@ public class HighlightBuilderTests extends ESTestCase {
      */
     public void testUnknownObjectFieldnameExpection() throws IOException {
         {
-            IllegalArgumentException e = expectParseThrows(IllegalArgumentException.class, "{\n" +
+            XContentParseException e = expectParseThrows(XContentParseException.class, "{\n" +
                     "    \"bad_fieldname\" :  { \"field\" : \"value\" }\n \n" +
                     "}\n");
-            assertEquals("[highlight] unknown field [bad_fieldname], parser not found", e.getMessage());
+            assertEquals("[2:5] [highlight] unknown field [bad_fieldname]", e.getMessage());
         }
 
         {
@@ -229,7 +232,7 @@ public class HighlightBuilderTests extends ESTestCase {
                     "}\n");
             assertThat(e.getMessage(), containsString("[highlight] failed to parse field [fields]"));
             assertThat(e.getCause().getMessage(), containsString("[fields] failed to parse field [body]"));
-            assertEquals("[highlight_field] unknown field [bad_fieldname], parser not found", e.getCause().getCause().getMessage());
+            assertEquals("[4:9] [highlight_field] unknown field [bad_fieldname]", e.getCause().getCause().getMessage());
         }
     }
 
@@ -271,12 +274,13 @@ public class HighlightBuilderTests extends ESTestCase {
      */
     public void testBuildSearchContextHighlight() throws IOException {
         Settings indexSettings = Settings.builder()
-                .put(IndexMetaData.SETTING_VERSION_CREATED, Version.CURRENT).build();
+                .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT).build();
         Index index = new Index(randomAlphaOfLengthBetween(1, 10), "_na_");
         IndexSettings idxSettings = IndexSettingsModule.newIndexSettings(index, indexSettings);
         // shard context will only need indicesQueriesRegistry for building Query objects nested in highlighter
-        QueryShardContext mockShardContext = new QueryShardContext(0, idxSettings, null, null, null, null, null, xContentRegistry(),
-            namedWriteableRegistry, null, null, System::currentTimeMillis, null) {
+        QueryShardContext mockShardContext = new QueryShardContext(0, idxSettings, BigArrays.NON_RECYCLING_INSTANCE,
+                null, null, null, null, null, xContentRegistry(), namedWriteableRegistry,
+                null, null, System::currentTimeMillis, null, null, () -> true, null) {
             @Override
             public MappedFieldType fieldMapper(String name) {
                 TextFieldMapper.Builder builder = new TextFieldMapper.Builder(name);
@@ -287,6 +291,7 @@ public class HighlightBuilderTests extends ESTestCase {
 
         for (int runs = 0; runs < NUMBER_OF_TESTBUILDERS; runs++) {
             HighlightBuilder highlightBuilder = randomHighlighterBuilder();
+            highlightBuilder = Rewriteable.rewrite(highlightBuilder, mockShardContext);
             SearchContextHighlight highlight = highlightBuilder.build(mockShardContext);
             for (SearchContextHighlight.Field field : highlight.fields()) {
                 String encoder = highlightBuilder.encoder() != null ? highlightBuilder.encoder() : HighlightBuilder.DEFAULT_ENCODER;
@@ -389,30 +394,32 @@ public class HighlightBuilderTests extends ESTestCase {
         String highlightElement = "{\n" +
                 "    \"tags_schema\" : \"styled\"\n" +
                 "}\n";
-        XContentParser parser = createParser(JsonXContent.jsonXContent, highlightElement);
+        try (XContentParser parser = createParser(JsonXContent.jsonXContent, highlightElement)) {
 
-        HighlightBuilder highlightBuilder = HighlightBuilder.fromXContent(parser);
-        assertArrayEquals("setting tags_schema 'styled' should alter pre_tags", HighlightBuilder.DEFAULT_STYLED_PRE_TAG,
+            HighlightBuilder highlightBuilder = HighlightBuilder.fromXContent(parser);
+            assertArrayEquals("setting tags_schema 'styled' should alter pre_tags", HighlightBuilder.DEFAULT_STYLED_PRE_TAG,
                 highlightBuilder.preTags());
-        assertArrayEquals("setting tags_schema 'styled' should alter post_tags", HighlightBuilder.DEFAULT_STYLED_POST_TAGS,
+            assertArrayEquals("setting tags_schema 'styled' should alter post_tags", HighlightBuilder.DEFAULT_STYLED_POST_TAGS,
                 highlightBuilder.postTags());
 
-        highlightElement = "{\n" +
+            highlightElement = "{\n" +
                 "    \"tags_schema\" : \"default\"\n" +
                 "}\n";
-        parser = createParser(JsonXContent.jsonXContent, highlightElement);
+        }
+        try (XContentParser parser = createParser(JsonXContent.jsonXContent, highlightElement)) {
 
-        highlightBuilder = HighlightBuilder.fromXContent(parser);
-        assertArrayEquals("setting tags_schema 'default' should alter pre_tags", HighlightBuilder.DEFAULT_PRE_TAGS,
+            HighlightBuilder highlightBuilder = HighlightBuilder.fromXContent(parser);
+            assertArrayEquals("setting tags_schema 'default' should alter pre_tags", HighlightBuilder.DEFAULT_PRE_TAGS,
                 highlightBuilder.preTags());
-        assertArrayEquals("setting tags_schema 'default' should alter post_tags", HighlightBuilder.DEFAULT_POST_TAGS,
+            assertArrayEquals("setting tags_schema 'default' should alter post_tags", HighlightBuilder.DEFAULT_POST_TAGS,
                 highlightBuilder.postTags());
 
-        XContentParseException e = expectParseThrows(XContentParseException.class, "{\n" +
+            XContentParseException e = expectParseThrows(XContentParseException.class, "{\n" +
                 "    \"tags_schema\" : \"somthing_else\"\n" +
                 "}\n");
-        assertThat(e.getMessage(), containsString("[highlight] failed to parse field [tags_schema]"));
-        assertEquals("Unknown tag schema [somthing_else]", e.getCause().getMessage());
+            assertThat(e.getMessage(), containsString("[highlight] failed to parse field [tags_schema]"));
+            assertEquals("Unknown tag schema [somthing_else]", e.getCause().getMessage());
+        }
     }
 
     /**
@@ -420,22 +427,22 @@ public class HighlightBuilderTests extends ESTestCase {
      */
     public void testParsingEmptyStructure() throws IOException {
         String highlightElement = "{ }";
-        XContentParser parser = createParser(JsonXContent.jsonXContent, highlightElement);
-
-        HighlightBuilder highlightBuilder = HighlightBuilder.fromXContent(parser);
-        assertEquals("expected plain HighlightBuilder", new HighlightBuilder(), highlightBuilder);
+        try (XContentParser parser = createParser(JsonXContent.jsonXContent, highlightElement)) {
+            HighlightBuilder highlightBuilder = HighlightBuilder.fromXContent(parser);
+            assertEquals("expected plain HighlightBuilder", new HighlightBuilder(), highlightBuilder);
+        }
 
         highlightElement = "{ \"fields\" : { } }";
-        parser = createParser(JsonXContent.jsonXContent, highlightElement);
-
-        highlightBuilder = HighlightBuilder.fromXContent(parser);
-        assertEquals("defining no field should return plain HighlightBuilder", new HighlightBuilder(), highlightBuilder);
+        try (XContentParser parser = createParser(JsonXContent.jsonXContent, highlightElement)) {
+            HighlightBuilder highlightBuilder = HighlightBuilder.fromXContent(parser);
+            assertEquals("defining no field should return plain HighlightBuilder", new HighlightBuilder(), highlightBuilder);
+        }
 
         highlightElement = "{ \"fields\" : { \"foo\" : { } } }";
-        parser = createParser(JsonXContent.jsonXContent, highlightElement);
-
-        highlightBuilder = HighlightBuilder.fromXContent(parser);
-        assertEquals("expected HighlightBuilder with field", new HighlightBuilder().field(new Field("foo")), highlightBuilder);
+        try (XContentParser parser = createParser(JsonXContent.jsonXContent, highlightElement)) {
+            HighlightBuilder highlightBuilder = HighlightBuilder.fromXContent(parser);
+            assertEquals("expected HighlightBuilder with field", new HighlightBuilder().field(new Field("foo")), highlightBuilder);
+        }
     }
 
     public void testPreTagsWithoutPostTags() throws IOException {
@@ -597,10 +604,10 @@ public class HighlightBuilderTests extends ESTestCase {
                     value = randomAlphaOfLengthBetween(1, 10);
                     break;
                 case 1:
-                    value = new Integer(randomInt(1000));
+                    value = Integer.valueOf(randomInt(1000));
                     break;
                 case 2:
-                    value = new Boolean(randomBoolean());
+                    value = Boolean.valueOf(randomBoolean());
                     break;
                 }
                 options.put(randomAlphaOfLengthBetween(1, 10), value);
@@ -706,9 +713,11 @@ public class HighlightBuilderTests extends ESTestCase {
             switch (randomIntBetween(0, 2)) {
                 // change settings that only exists on top level
                 case 0:
-                    mutation.useExplicitFieldOrder(!original.useExplicitFieldOrder()); break;
+                    mutation.useExplicitFieldOrder(!original.useExplicitFieldOrder());
+                    break;
                 case 1:
-                    mutation.encoder(original.encoder() + randomAlphaOfLength(2)); break;
+                    mutation.encoder(original.encoder() + randomAlphaOfLength(2));
+                    break;
                 case 2:
                     if (randomBoolean()) {
                         // add another field
