@@ -5,43 +5,49 @@
  */
 package org.elasticsearch.xpack.core.ssl;
 
+import org.apache.http.HttpHost;
+import org.apache.http.conn.ssl.DefaultHostnameVerifier;
 import org.apache.http.conn.ssl.NoopHostnameVerifier;
 import org.apache.http.nio.conn.ssl.SSLIOSessionStrategy;
+import org.apache.http.nio.reactor.IOSession;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.apache.lucene.util.SetOnce;
-import org.bouncycastle.operator.OperatorCreationException;
 import org.elasticsearch.ElasticsearchException;
+import org.elasticsearch.ElasticsearchSecurityException;
 import org.elasticsearch.common.CheckedSupplier;
 import org.elasticsearch.common.Strings;
-import org.elasticsearch.common.component.AbstractComponent;
+import org.elasticsearch.common.logging.LoggerMessageFormat;
+import org.elasticsearch.common.settings.Setting;
 import org.elasticsearch.common.settings.Settings;
+import org.elasticsearch.common.ssl.DiagnosticTrustManager;
+import org.elasticsearch.common.ssl.SslDiagnostics;
 import org.elasticsearch.env.Environment;
 import org.elasticsearch.xpack.core.XPackSettings;
 import org.elasticsearch.xpack.core.common.socket.SocketAccess;
-import org.elasticsearch.xpack.core.security.SecurityField;
 import org.elasticsearch.xpack.core.ssl.cert.CertificateInfo;
+import org.elasticsearch.xpack.core.watcher.WatcherField;
 
 import javax.net.ssl.HostnameVerifier;
 import javax.net.ssl.SSLContext;
 import javax.net.ssl.SSLEngine;
+import javax.net.ssl.SSLException;
 import javax.net.ssl.SSLParameters;
+import javax.net.ssl.SSLPeerUnverifiedException;
+import javax.net.ssl.SSLSession;
 import javax.net.ssl.SSLSessionContext;
 import javax.net.ssl.SSLSocket;
 import javax.net.ssl.SSLSocketFactory;
 import javax.net.ssl.X509ExtendedKeyManager;
 import javax.net.ssl.X509ExtendedTrustManager;
-import javax.security.auth.DestroyFailedException;
-
+import javax.security.auth.x500.X500Principal;
 import java.io.IOException;
 import java.net.InetAddress;
 import java.net.Socket;
 import java.security.GeneralSecurityException;
 import java.security.KeyManagementException;
-import java.security.KeyStoreException;
 import java.security.NoSuchAlgorithmException;
-import java.security.Principal;
-import java.security.PrivateKey;
-import java.security.UnrecoverableKeyException;
-import java.security.cert.CertificateException;
+import java.security.cert.Certificate;
 import java.security.cert.X509Certificate;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -50,40 +56,99 @@ import java.util.Collections;
 import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.LinkedHashMap;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
+import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
+import java.util.function.Supplier;
+import java.util.stream.Collectors;
+
+import static org.elasticsearch.xpack.core.XPackSettings.DEFAULT_SUPPORTED_PROTOCOLS;
 
 /**
  * Provides access to {@link SSLEngine} and {@link SSLSocketFactory} objects based on a provided configuration. All
  * configurations loaded by this service must be configured on construction.
  */
-public class SSLService extends AbstractComponent {
+public class SSLService {
 
-    private final Map<SSLConfiguration, SSLContextHolder> sslContexts;
-    private final SSLConfiguration globalSSLConfiguration;
-    private final SetOnce<SSLConfiguration> transportSSLConfiguration = new SetOnce<>();
+    private static final Logger logger = LogManager.getLogger(SSLService.class);
+    /**
+     * An ordered map of protocol algorithms to SSLContext algorithms. The map is ordered from most
+     * secure to least secure. The names in this map are taken from the
+     * <a href="https://docs.oracle.com/en/java/javase/11/docs/specs/security/standard-names.html#sslcontext-algorithms">
+     * Java Security Standard Algorithm Names Documentation for Java 11</a>.
+     */
+    private static final Map<String, String> ORDERED_PROTOCOL_ALGORITHM_MAP;
+    static {
+        LinkedHashMap<String, String> protocolAlgorithmMap = new LinkedHashMap<>();
+        if (DEFAULT_SUPPORTED_PROTOCOLS.contains("TLSv1.3")) {
+            protocolAlgorithmMap.put("TLSv1.3", "TLSv1.3");
+        }
+        protocolAlgorithmMap.put("TLSv1.2", "TLSv1.2");
+        protocolAlgorithmMap.put("TLSv1.1", "TLSv1.1");
+        protocolAlgorithmMap.put("TLSv1", "TLSv1");
+        protocolAlgorithmMap.put("SSLv3", "SSLv3");
+        protocolAlgorithmMap.put("SSLv2", "SSL");
+        protocolAlgorithmMap.put("SSLv2Hello", "SSL");
+        ORDERED_PROTOCOL_ALGORITHM_MAP = Collections.unmodifiableMap(protocolAlgorithmMap);
+    }
+
+    private static final Setting<Boolean> DIAGNOSE_TRUST_EXCEPTIONS_SETTING = Setting.boolSetting(
+        "xpack.security.ssl.diagnose.trust", true, Setting.Property.NodeScope);
+
     private final Environment env;
+    private final Settings settings;
+    private final boolean diagnoseTrustExceptions;
+
+    /**
+     * This is a mapping from "context name" (in general use, the name of a setting key)
+     * to a configuration.
+     * This allows us to easily answer the question "What is the configuration for ssl in realm XYZ?"
+     * Multiple "context names" may map to the same configuration (either by object-identity or by object-equality).
+     * For example "xpack.http.ssl" may exist as a name in this map and have the global ssl configuration as a value
+     */
+    private final Map<String, SSLConfiguration> sslConfigurations;
+
+    /**
+     * A mapping from an SSLConfiguration to a pre-built context.
+     * <p>
+     * This is managed separately to the {@link #sslConfigurations} map, so that a single configuration (by object equality)
+     * always maps to the same {@link SSLContextHolder}, even if it is being used within a different context-name.
+     */
+    private final Map<SSLConfiguration, SSLContextHolder> sslContexts;
+    private final SetOnce<SSLConfiguration> transportSSLConfiguration = new SetOnce<>();
 
     /**
      * Create a new SSLService that parses the settings for the ssl contexts that need to be created, creates them, and then caches them
      * for use later
      */
-    public SSLService(Settings settings, Environment environment) throws CertificateException, UnrecoverableKeyException,
-            NoSuchAlgorithmException, IOException, DestroyFailedException, KeyStoreException, OperatorCreationException {
-        super(settings);
+    public SSLService(Environment environment) {
         this.env = environment;
-        this.globalSSLConfiguration = new SSLConfiguration(settings.getByPrefix(XPackSettings.GLOBAL_SSL_PREFIX));
+        this.settings = env.settings();
+        this.diagnoseTrustExceptions = DIAGNOSE_TRUST_EXCEPTIONS_SETTING.get(environment.settings());
+        this.sslConfigurations = new HashMap<>();
         this.sslContexts = loadSSLConfigurations();
     }
 
-    private SSLService(Settings settings, Environment environment, SSLConfiguration globalSSLConfiguration,
-                       Map<SSLConfiguration, SSLContextHolder> sslContexts) {
-        super(settings);
+    @Deprecated
+    public SSLService(Settings settings, Environment environment) {
         this.env = environment;
-        this.globalSSLConfiguration = globalSSLConfiguration;
+        this.settings = env.settings();
+        this.diagnoseTrustExceptions = DIAGNOSE_TRUST_EXCEPTIONS_SETTING.get(settings);
+        this.sslConfigurations = new HashMap<>();
+        this.sslContexts = loadSSLConfigurations();
+    }
+
+    private SSLService(Environment environment, Map<String, SSLConfiguration> sslConfigurations,
+                       Map<SSLConfiguration, SSLContextHolder> sslContexts) {
+        this.env = environment;
+        this.settings = env.settings();
+        this.diagnoseTrustExceptions = DIAGNOSE_TRUST_EXCEPTIONS_SETTING.get(environment.settings());
+        this.sslConfigurations = sslConfigurations;
         this.sslContexts = sslContexts;
     }
 
@@ -93,7 +158,7 @@ public class SSLService extends AbstractComponent {
      * have been created during initialization
      */
     public SSLService createDynamicSSLService() {
-        return new SSLService(settings, env, globalSSLConfiguration, sslContexts) {
+        return new SSLService(env, sslConfigurations, sslContexts) {
 
             @Override
             Map<SSLConfiguration, SSLContextHolder> loadSSLConfigurations() {
@@ -117,6 +182,10 @@ public class SSLService extends AbstractComponent {
         };
     }
 
+    public static void registerSettings(List<Setting<?>> settingList) {
+        settingList.add(DIAGNOSE_TRUST_EXCEPTIONS_SETTING);
+    }
+
     /**
      * Create a new {@link SSLIOSessionStrategy} based on the provided settings. The settings are used to identify the SSL configuration
      * that should be used to create the context.
@@ -124,9 +193,17 @@ public class SSLService extends AbstractComponent {
      * @param settings the settings used to identify the ssl configuration, typically under a *.ssl. prefix. An empty settings will return
      *                 a context created from the default configuration
      * @return Never {@code null}.
+     * @deprecated This method will fail if the SSL configuration uses a {@link org.elasticsearch.common.settings.SecureSetting} but the
+     * {@link org.elasticsearch.common.settings.SecureSettings} have been closed. Use {@link #getSSLConfiguration(String)}
+     * and {@link #sslIOSessionStrategy(SSLConfiguration)} (Deprecated, but not removed because monitoring uses dynamic SSL settings)
      */
+    @Deprecated
     public SSLIOSessionStrategy sslIOSessionStrategy(Settings settings) {
         SSLConfiguration config = sslConfiguration(settings);
+        return sslIOSessionStrategy(config);
+    }
+
+    public SSLIOSessionStrategy sslIOSessionStrategy(SSLConfiguration config) {
         SSLContext sslContext = sslContext(config);
         String[] ciphers = supportedCiphers(sslParameters(sslContext).getCipherSuites(), config.cipherSuites(), false);
         String[] supportedProtocols = config.supportedProtocols().toArray(Strings.EMPTY_ARRAY);
@@ -139,6 +216,14 @@ public class SSLService extends AbstractComponent {
         }
 
         return sslIOSessionStrategy(sslContext, supportedProtocols, ciphers, verifier);
+    }
+
+    public static HostnameVerifier getHostnameVerifier(SSLConfiguration sslConfiguration) {
+        if (sslConfiguration.verificationMode().isHostnameVerificationEnabled()) {
+            return new DefaultHostnameVerifier();
+        } else {
+            return NoopHostnameVerifier.INSTANCE;
+        }
     }
 
     /**
@@ -158,73 +243,56 @@ public class SSLService extends AbstractComponent {
      * not expose any of the parameters that you give it.
      *
      * @param sslContext SSL Context used to handle SSL / TCP requests
-     * @param protocols Supported protocols
-     * @param ciphers Supported ciphers
-     * @param verifier Hostname verifier
+     * @param protocols  Supported protocols
+     * @param ciphers    Supported ciphers
+     * @param verifier   Hostname verifier
      * @return Never {@code null}.
      */
     SSLIOSessionStrategy sslIOSessionStrategy(SSLContext sslContext, String[] protocols, String[] ciphers, HostnameVerifier verifier) {
-        return new SSLIOSessionStrategy(sslContext, protocols, ciphers, verifier);
+        return new SSLIOSessionStrategy(sslContext, protocols, ciphers, verifier) {
+            @Override
+            protected void verifySession(HttpHost host, IOSession iosession, SSLSession session) throws SSLException {
+                if (verifier.verify(host.getHostName(), session) == false) {
+                    final Certificate[] certs = session.getPeerCertificates();
+                    final X509Certificate x509 = (X509Certificate) certs[0];
+                    final X500Principal x500Principal = x509.getSubjectX500Principal();
+                    final String altNames = Strings.collectionToCommaDelimitedString(SslDiagnostics.describeValidHostnames(x509));
+                    throw new SSLPeerUnverifiedException(LoggerMessageFormat.format("Expected SSL certificate to be valid for host [{}]," +
+                            " but it is only valid for subject alternative names [{}] and subject [{}]",
+                        new Object[] { host.getHostName(), altNames, x500Principal.toString() }));
+                }
+            }
+        };
     }
 
     /**
-     * Create a new {@link SSLSocketFactory} based on the provided settings. The settings are used to identify the ssl configuration that
-     * should be used to create the socket factory. The socket factory will also properly configure the ciphers and protocols on each
-     * socket that is created
-     * @param settings the settings used to identify the ssl configuration, typically under a *.ssl. prefix. An empty settings will return
-     *                 a factory created from the default configuration
+     * Create a new {@link SSLSocketFactory} based on the provided configuration.
+     * The socket factory will also properly configure the ciphers and protocols on each socket that is created
+     * @param configuration The SSL configuration to use. Typically obtained from {@link #getSSLConfiguration(String)}
      * @return Never {@code null}.
      */
-    public SSLSocketFactory sslSocketFactory(Settings settings) {
-        SSLConfiguration sslConfiguration = sslConfiguration(settings);
-        SSLSocketFactory socketFactory = sslContext(sslConfiguration).getSocketFactory();
-        return new SecuritySSLSocketFactory(socketFactory, sslConfiguration.supportedProtocols().toArray(Strings.EMPTY_ARRAY),
-                supportedCiphers(socketFactory.getSupportedCipherSuites(), sslConfiguration.cipherSuites(), false));
-    }
-
-    /**
-     * Creates an {@link SSLEngine} based on the provided settings. The settings are used to identify the ssl configuration that should be
-     * used to create the engine. This SSLEngine cannot be used for hostname verification since the engine will not be created with the
-     * host and port. This method is useful to obtain an SSLEngine that will be used for server connections or client connections that
-     * will not use hostname verification.
-     * @param settings the settings used to identify the ssl configuration, typically under a *.ssl. prefix. An empty settings will return
-     *                 a SSLEngine created from the default configuration
-     * @param fallbackSettings the settings that should be used for the fallback of the SSLConfiguration. Using {@link Settings#EMPTY}
-     *                         results in a fallback to the global configuration
-     * @return {@link SSLEngine}
-     */
-    public SSLEngine createSSLEngine(Settings settings, Settings fallbackSettings) {
-        return createSSLEngine(settings, fallbackSettings, null, -1);
-    }
-
-    /**
-     * Creates an {@link SSLEngine} based on the provided settings. The settings are used to identify the ssl configuration that should be
-     * used to create the engine. This SSLEngine can be used for a connection that requires hostname verification assuming the provided
-     * host and port are correct. The SSLEngine created by this method is most useful for clients with hostname verification enabled
-     * @param settings the settings used to identify the ssl configuration, typically under a *.ssl. prefix. An empty settings will return
-     *                 a SSLEngine created from the default configuration
-     * @param fallbackSettings the settings that should be used for the fallback of the SSLConfiguration. Using {@link Settings#EMPTY}
-     *                         results in a fallback to the global configuration
-     * @param host the host of the remote endpoint. If using hostname verification, this should match what is in the remote endpoint's
-     *             certificate
-     * @param port the port of the remote endpoint
-     * @return {@link SSLEngine}
-     */
-    public SSLEngine createSSLEngine(Settings settings, Settings fallbackSettings, String host, int port) {
-        SSLConfiguration configuration = sslConfiguration(settings, fallbackSettings);
-        return createSSLEngine(configuration, host, port);
+    public SSLSocketFactory sslSocketFactory(SSLConfiguration configuration) {
+        final SSLContextHolder contextHolder = sslContextHolder(configuration);
+        SSLSocketFactory socketFactory = contextHolder.sslContext().getSocketFactory();
+        final SecuritySSLSocketFactory securitySSLSocketFactory = new SecuritySSLSocketFactory(
+            () -> contextHolder.sslContext().getSocketFactory(),
+            configuration.supportedProtocols().toArray(Strings.EMPTY_ARRAY),
+            supportedCiphers(socketFactory.getSupportedCipherSuites(), configuration.cipherSuites(), false));
+        contextHolder.addReloadListener(securitySSLSocketFactory::reload);
+        return securitySSLSocketFactory;
     }
 
     /**
      * Creates an {@link SSLEngine} based on the provided configuration. This SSLEngine can be used for a connection that requires
      * hostname verification assuming the provided
      * host and port are correct. The SSLEngine created by this method is most useful for clients with hostname verification enabled
+     *
      * @param configuration the ssl configuration
-     * @param host the host of the remote endpoint. If using hostname verification, this should match what is in the remote endpoint's
-     *             certificate
-     * @param port the port of the remote endpoint
+     * @param host          the host of the remote endpoint. If using hostname verification, this should match what is in the remote
+     *                      endpoint's certificate
+     * @param port          the port of the remote endpoint
      * @return {@link SSLEngine}
-     * @see #sslConfiguration(Settings, Settings)
+     * @see #getSSLConfiguration(String)
      */
     public SSLEngine createSSLEngine(SSLConfiguration configuration, String host, int port) {
         SSLContext sslContext = sslContext(configuration);
@@ -233,7 +301,7 @@ public class SSLService extends AbstractComponent {
         String[] supportedProtocols = configuration.supportedProtocols().toArray(Strings.EMPTY_ARRAY);
         SSLParameters parameters = new SSLParameters(ciphers, supportedProtocols);
         if (configuration.verificationMode().isHostnameVerificationEnabled() && host != null) {
-            // By default, a SSLEngine will not perform hostname verification. In order to perform hostname verification
+            // By default, an SSLEngine will not perform hostname verification. In order to perform hostname verification
             // we need to specify a EndpointIdentificationAlgorithm. We use the HTTPS algorithm to prevent against
             // man in the middle attacks for all of our connections.
             parameters.setEndpointIdentificationAlgorithm("HTTPS");
@@ -251,114 +319,71 @@ public class SSLService extends AbstractComponent {
 
     /**
      * Returns whether the provided settings results in a valid configuration that can be used for server connections
+     *
      * @param sslConfiguration the configuration to check
      */
     public boolean isConfigurationValidForServerUsage(SSLConfiguration sslConfiguration) {
+        Objects.requireNonNull(sslConfiguration, "SSLConfiguration cannot be null");
         return sslConfiguration.keyConfig() != KeyConfig.NONE;
-    }
-
-    /**
-     * Indicates whether client authentication is enabled for a particular configuration
-     * @param settings the settings used to identify the ssl configuration, typically under a *.ssl. prefix. The global configuration
-     *                 will be used for fallback
-     */
-    public boolean isSSLClientAuthEnabled(Settings settings) {
-        return isSSLClientAuthEnabled(settings, Settings.EMPTY);
-    }
-
-    /**
-     * Indicates whether client authentication is enabled for a particular configuration
-     * @param settings the settings used to identify the ssl configuration, typically under a *.ssl. prefix
-     * @param fallback the settings that should be used for the fallback of the SSLConfiguration. Using {@link Settings#EMPTY}
-     *                 results in a fallback to the global configuration
-     */
-    public boolean isSSLClientAuthEnabled(Settings settings, Settings fallback) {
-        SSLConfiguration sslConfiguration = sslConfiguration(settings, fallback);
-        return isSSLClientAuthEnabled(sslConfiguration);
     }
 
     /**
      * Indicates whether client authentication is enabled for a particular configuration
      */
     public boolean isSSLClientAuthEnabled(SSLConfiguration sslConfiguration) {
+        Objects.requireNonNull(sslConfiguration, "SSLConfiguration cannot be null");
         return sslConfiguration.sslClientAuth().enabled();
     }
 
     /**
-     * Returns the {@link VerificationMode} that is specified in the settings (or the default)
-     * @param settings the settings used to identify the ssl configuration, typically under a *.ssl. prefix
-     * @param fallback the settings that should be used for the fallback of the SSLConfiguration. Using {@link Settings#EMPTY}
-     *                 results in a fallback to the global configuration
+     * Returns the {@link SSLContext} for the configuration. Mainly used for testing
      */
-    public VerificationMode getVerificationMode(Settings settings, Settings fallback) {
-        SSLConfiguration sslConfiguration = sslConfiguration(settings, fallback);
-        return sslConfiguration.verificationMode();
-    }
-
-    /**
-     * Returns the {@link SSLContext} for the global configuration. Mainly used for testing
-     */
-    SSLContext sslContext() {
-        return sslContextHolder(globalSSLConfiguration).sslContext();
-    }
-
-    /**
-     * Returns the {@link SSLContext} for the configuration
-     */
-    SSLContext sslContext(SSLConfiguration configuration) {
+    public SSLContext sslContext(SSLConfiguration configuration) {
         return sslContextHolder(configuration).sslContext();
     }
 
     /**
      * Returns the existing {@link SSLContextHolder} for the configuration
+     *
      * @throws IllegalArgumentException if not found
      */
     SSLContextHolder sslContextHolder(SSLConfiguration sslConfiguration) {
+        Objects.requireNonNull(sslConfiguration, "SSL Configuration cannot be null");
         SSLContextHolder holder = sslContexts.get(sslConfiguration);
         if (holder == null) {
-            throw new IllegalArgumentException("did not find a SSLContext for [" + sslConfiguration.toString() + "]");
+            throw new IllegalArgumentException("did not find an SSLContext for [" + sslConfiguration.toString() + "]");
         }
         return holder;
     }
 
     /**
      * Returns the existing {@link SSLConfiguration} for the given settings
+     *
      * @param settings the settings for the ssl configuration
-     * @return the ssl configuration for the provided settings. If the settings are empty, the global configuration is returned
+     * @return the ssl configuration for the provided settings
      */
-    SSLConfiguration sslConfiguration(Settings settings) {
-        if (settings.isEmpty()) {
-            return globalSSLConfiguration;
-        }
-        return new SSLConfiguration(settings, globalSSLConfiguration);
+    public SSLConfiguration sslConfiguration(Settings settings) {
+        return new SSLConfiguration(settings);
     }
 
-    /**
-     * Returns the existing {@link SSLConfiguration} for the given settings and applies the provided fallback settings instead of the global
-     * configuration
-     * @param settings the settings for the ssl configuration
-     * @param fallbackSettings the settings that should be used for the fallback of the SSLConfiguration. Using {@link Settings#EMPTY}
-     *                         results in a fallback to the global configuration
-     * @return the ssl configuration for the provided settings. If the settings are empty, the global configuration is returned
-     */
-    public SSLConfiguration sslConfiguration(Settings settings, Settings fallbackSettings) {
-        if (settings.isEmpty() && fallbackSettings.isEmpty()) {
-            return globalSSLConfiguration;
-        }
-        SSLConfiguration fallback = sslConfiguration(fallbackSettings);
-        return new SSLConfiguration(settings, fallback);
+    public Set<String> getTransportProfileContextNames() {
+        return Collections.unmodifiableSet(this.sslConfigurations
+            .keySet().stream()
+            .filter(k -> k.startsWith("transport.profiles."))
+            .collect(Collectors.toSet()));
     }
 
     /**
      * Accessor to the loaded ssl configuration objects at the current point in time. This is useful for testing
      */
     Collection<SSLConfiguration> getLoadedSSLConfigurations() {
-        return Collections.unmodifiableSet(new HashSet<>(sslContexts.keySet()));
+        return Set.copyOf(sslContexts.keySet());
     }
 
     /**
      * Returns the intersection of the supported ciphers with the requested ciphers. This method will also optionally log if unsupported
      * ciphers were requested.
+     *
      * @throws IllegalArgumentException if no supported ciphers are in the requested ciphers
      */
     String[] supportedCiphers(String[] supportedCiphers, List<String> requestedCiphers, boolean log) {
@@ -396,6 +421,7 @@ public class SSLService extends AbstractComponent {
 
     /**
      * Creates an {@link SSLContext} based on the provided configuration
+     *
      * @param sslConfiguration the configuration to use for context creation
      * @return the created SSLContext
      */
@@ -403,63 +429,139 @@ public class SSLService extends AbstractComponent {
         if (logger.isDebugEnabled()) {
             logger.debug("using ssl settings [{}]", sslConfiguration);
         }
-        ReloadableTrustManager trustManager =
-                new ReloadableTrustManager(sslConfiguration.trustConfig().createTrustManager(env), sslConfiguration.trustConfig());
-        ReloadableX509KeyManager keyManager =
-                new ReloadableX509KeyManager(sslConfiguration.keyConfig().createKeyManager(env), sslConfiguration.keyConfig());
+        X509ExtendedTrustManager trustManager = sslConfiguration.trustConfig().createTrustManager(env);
+        X509ExtendedKeyManager keyManager = sslConfiguration.keyConfig().createKeyManager(env);
         return createSslContext(keyManager, trustManager, sslConfiguration);
     }
 
     /**
      * Creates an {@link SSLContext} based on the provided configuration and trust/key managers
+     *
      * @param sslConfiguration the configuration to use for context creation
-     * @param keyManager the key manager to use
-     * @param trustManager the trust manager to use
+     * @param keyManager       the key manager to use
+     * @param trustManager     the trust manager to use
      * @return the created SSLContext
      */
-    private SSLContextHolder createSslContext(ReloadableX509KeyManager keyManager, ReloadableTrustManager trustManager,
+    private SSLContextHolder createSslContext(X509ExtendedKeyManager keyManager, X509ExtendedTrustManager trustManager,
                                               SSLConfiguration sslConfiguration) {
+        trustManager = wrapWithDiagnostics(trustManager, sslConfiguration);
         // Initialize sslContext
         try {
             SSLContext sslContext = SSLContext.getInstance(sslContextAlgorithm(sslConfiguration.supportedProtocols()));
-            sslContext.init(new X509ExtendedKeyManager[] { keyManager }, new X509ExtendedTrustManager[] { trustManager }, null);
+            sslContext.init(new X509ExtendedKeyManager[]{keyManager}, new X509ExtendedTrustManager[]{trustManager}, null);
 
             // check the supported ciphers and log them here to prevent spamming logs on every call
             supportedCiphers(sslContext.getSupportedSSLParameters().getCipherSuites(), sslConfiguration.cipherSuites(), true);
 
-            return new SSLContextHolder(sslContext, trustManager, keyManager);
+            return new SSLContextHolder(sslContext, sslConfiguration);
         } catch (NoSuchAlgorithmException | KeyManagementException e) {
             throw new ElasticsearchException("failed to initialize the SSLContext", e);
         }
     }
 
+    X509ExtendedTrustManager wrapWithDiagnostics(X509ExtendedTrustManager trustManager, SSLConfiguration configuration) {
+        if (diagnoseTrustExceptions && trustManager instanceof DiagnosticTrustManager == false) {
+            final Logger diagnosticLogger = LogManager.getLogger(DiagnosticTrustManager.class);
+            // A single configuration might be used in many place, if there are multiple, we just list "shared" because
+            // that is better than the alternatives. Just listing would be misleading (it might not be the right one)
+            // but listing all of them would be confusing (e.g. some might be the default realms)
+            // This needs to be a supplier (deferred evaluation) because we might load more configurations after this context is built.
+            final Supplier<String> contextName = () -> {
+                final List<String> names = sslConfigurations.entrySet().stream()
+                    .filter(e -> e.getValue().equals(configuration))
+                    .limit(2) // we only need to distinguishing between 0/1/many
+                    .map(Entry::getKey)
+                    .collect(Collectors.toUnmodifiableList());
+                switch (names.size()) {
+                    case 0:
+                        return "(unknown)";
+                    case 1:
+                        return names.get(0);
+                    default:
+                        return "(shared)";
+                }
+            };
+            trustManager = new DiagnosticTrustManager(trustManager, contextName, diagnosticLogger::warn);
+        }
+        return trustManager;
+    }
+
     /**
      * Parses the settings to load all SSLConfiguration objects that will be used.
      */
-    Map<SSLConfiguration, SSLContextHolder> loadSSLConfigurations() throws CertificateException,
-            UnrecoverableKeyException, NoSuchAlgorithmException, IOException, DestroyFailedException, KeyStoreException,
-            OperatorCreationException {
-        Map<SSLConfiguration, SSLContextHolder> sslConfigurations = new HashMap<>();
-        sslConfigurations.put(globalSSLConfiguration, createSslContext(globalSSLConfiguration));
+    Map<SSLConfiguration, SSLContextHolder> loadSSLConfigurations() {
+        final Map<SSLConfiguration, SSLContextHolder> sslContextHolders = new HashMap<>();
+
+        final Map<String, Settings> sslSettingsMap = new HashMap<>();
+        sslSettingsMap.put(XPackSettings.HTTP_SSL_PREFIX, getHttpTransportSSLSettings(settings));
+        sslSettingsMap.put("xpack.http.ssl", settings.getByPrefix("xpack.http.ssl."));
+        sslSettingsMap.putAll(getRealmsSSLSettings(settings));
+        sslSettingsMap.putAll(getMonitoringExporterSettings(settings));
+        sslSettingsMap.put(WatcherField.EMAIL_NOTIFICATION_SSL_PREFIX, settings.getByPrefix(WatcherField.EMAIL_NOTIFICATION_SSL_PREFIX));
+
+        sslSettingsMap.forEach((key, sslSettings) -> loadConfiguration(key, sslSettings, sslContextHolders));
 
         final Settings transportSSLSettings = settings.getByPrefix(XPackSettings.TRANSPORT_SSL_PREFIX);
-        List<Settings> sslSettingsList = new ArrayList<>();
-        sslSettingsList.add(getHttpTransportSSLSettings(settings));
-        sslSettingsList.add(settings.getByPrefix("xpack.http.ssl."));
-        sslSettingsList.addAll(getRealmsSSLSettings(settings));
-        sslSettingsList.addAll(getMonitoringExporterSettings(settings));
-
-        sslSettingsList.forEach((sslSettings) ->
-                sslConfigurations.computeIfAbsent(new SSLConfiguration(sslSettings, globalSSLConfiguration), this::createSslContext));
-
-        // transport is special because we want to use a auto-generated key when there isn't one
-        final SSLConfiguration transportSSLConfiguration = new SSLConfiguration(transportSSLSettings, globalSSLConfiguration);
+        final SSLConfiguration transportSSLConfiguration =
+            loadConfiguration(XPackSettings.TRANSPORT_SSL_PREFIX, transportSSLSettings, sslContextHolders);
         this.transportSSLConfiguration.set(transportSSLConfiguration);
-        List<Settings> profileSettings = getTransportProfileSSLSettings(settings);
-        sslConfigurations.computeIfAbsent(transportSSLConfiguration, this::createSslContext);
-        profileSettings.forEach((profileSetting) ->
-            sslConfigurations.computeIfAbsent(new SSLConfiguration(profileSetting, transportSSLConfiguration), this::createSslContext));
-        return Collections.unmodifiableMap(sslConfigurations);
+        Map<String, Settings> profileSettings = getTransportProfileSSLSettings(settings);
+        profileSettings.forEach((key, profileSetting) -> loadConfiguration(key, profileSetting, sslContextHolders));
+
+        for (String context : List.of("xpack.security.transport.ssl", "xpack.security.http.ssl")) {
+            validateServerConfiguration(context);
+        }
+
+        return Collections.unmodifiableMap(sslContextHolders);
+    }
+
+    private SSLConfiguration loadConfiguration(String key, Settings settings, Map<SSLConfiguration, SSLContextHolder> contextHolders) {
+        if (key.endsWith(".")) {
+            // Drop trailing '.' so that any exception messages are consistent
+            key = key.substring(0, key.length() - 1);
+        }
+        try {
+            final SSLConfiguration configuration = new SSLConfiguration(settings);
+            storeSslConfiguration(key, configuration);
+            contextHolders.computeIfAbsent(configuration, this::createSslContext);
+            return configuration;
+        } catch (Exception e) {
+            throw new ElasticsearchSecurityException("failed to load SSL configuration [{}]", e, key);
+        }
+    }
+
+    private void validateServerConfiguration(String prefix) {
+        assert prefix.endsWith(".ssl");
+        SSLConfiguration configuration = getSSLConfiguration(prefix);
+        final String enabledSetting = prefix + ".enabled";
+        if (settings.getAsBoolean(enabledSetting, false)) {
+            // Client Authentication _should_ be required, but if someone turns it off, then this check is no longer relevant
+            final SSLConfigurationSettings configurationSettings = SSLConfigurationSettings.withPrefix(prefix + ".");
+            if (isConfigurationValidForServerUsage(configuration) == false) {
+                throw new ElasticsearchSecurityException("invalid SSL configuration for " + prefix +
+                    " - server ssl configuration requires a key and certificate, but these have not been configured; you must set either " +
+                    "[" + configurationSettings.x509KeyPair.keystorePath.getKey() + "], or both [" +
+                    configurationSettings.x509KeyPair.keyPath.getKey() + "] and [" +
+                    configurationSettings.x509KeyPair.certificatePath.getKey() + "]");
+            }
+        } else if (settings.hasValue(enabledSetting) == false) {
+            final List<String> sslSettingNames = settings.keySet().stream()
+                .filter(s -> s.startsWith(prefix))
+                .sorted()
+                .collect(Collectors.toUnmodifiableList());
+            if (sslSettingNames.isEmpty() == false) {
+                throw new ElasticsearchSecurityException("invalid configuration for " + prefix + " - [" + enabledSetting +
+                    "] is not set, but the following settings have been configured in elasticsearch.yml : [" +
+                    Strings.collectionToCommaDelimitedString(sslSettingNames) + "]");
+            }
+        }
+    }
+
+    private void storeSslConfiguration(String key, SSLConfiguration configuration) {
+        if (key.endsWith(".")) {
+            key = key.substring(0, key.length() - 1);
+        }
+        sslConfigurations.put(key, configuration);
     }
 
 
@@ -469,6 +571,7 @@ public class SSLService extends AbstractComponent {
      * certificates that are provided by the JRE.
      * Due to the nature of KeyStores, this may include certificates that are available, but never used
      * such as a CA certificate that is no longer in use, or a server certificate for an unrelated host.
+     *
      * @see TrustConfig#certificates(Environment)
      */
     public Set<CertificateInfo> getLoadedCertificates() throws GeneralSecurityException, IOException {
@@ -486,12 +589,15 @@ public class SSLService extends AbstractComponent {
      */
     private static class SecuritySSLSocketFactory extends SSLSocketFactory {
 
-        private final SSLSocketFactory delegate;
+        private final Supplier<SSLSocketFactory> delegateSupplier;
         private final String[] supportedProtocols;
         private final String[] ciphers;
 
-        SecuritySSLSocketFactory(SSLSocketFactory delegate, String[] supportedProtocols, String[] ciphers) {
-            this.delegate = delegate;
+        private volatile SSLSocketFactory delegate;
+
+        SecuritySSLSocketFactory(Supplier<SSLSocketFactory> delegateSupplier, String[] supportedProtocols, String[] ciphers) {
+            this.delegateSupplier = delegateSupplier;
+            this.delegate = this.delegateSupplier.get();
             this.supportedProtocols = supportedProtocols;
             this.ciphers = ciphers;
         }
@@ -529,14 +635,14 @@ public class SSLService extends AbstractComponent {
 
         @Override
         public Socket createSocket(String host, int port, InetAddress localHost, int localPort) throws IOException {
-            SSLSocket sslSocket = createWithPermissions(() ->  delegate.createSocket(host, port, localHost, localPort));
+            SSLSocket sslSocket = createWithPermissions(() -> delegate.createSocket(host, port, localHost, localPort));
             configureSSLSocket(sslSocket);
             return sslSocket;
         }
 
         @Override
         public Socket createSocket(InetAddress host, int port) throws IOException {
-            SSLSocket sslSocket = createWithPermissions(() ->  delegate.createSocket(host, port));
+            SSLSocket sslSocket = createWithPermissions(() -> delegate.createSocket(host, port));
             configureSSLSocket(sslSocket);
             return sslSocket;
         }
@@ -546,6 +652,11 @@ public class SSLService extends AbstractComponent {
             SSLSocket sslSocket = createWithPermissions(() -> delegate.createSocket(address, port, localAddress, localPort));
             configureSSLSocket(sslSocket);
             return sslSocket;
+        }
+
+        public void reload() {
+            final SSLSocketFactory newDelegate = delegateSupplier.get();
+            this.delegate = newDelegate;
         }
 
         private void configureSSLSocket(SSLSocket socket) {
@@ -560,286 +671,107 @@ public class SSLService extends AbstractComponent {
         }
     }
 
-    /**
-     * Wraps a trust manager to delegate to. If the trust material needs to be reloaded, then the delegate will be switched after
-     * reloading
-     */
-    final class ReloadableTrustManager extends X509ExtendedTrustManager {
 
-        private volatile X509ExtendedTrustManager trustManager;
-        private final TrustConfig trustConfig;
-
-        ReloadableTrustManager(X509ExtendedTrustManager trustManager, TrustConfig trustConfig) {
-            this.trustManager = trustManager == null ? new EmptyX509TrustManager() : trustManager;
-            this.trustConfig = trustConfig;
-        }
-
-        @Override
-        public void checkClientTrusted(X509Certificate[] x509Certificates, String s, Socket socket) throws CertificateException {
-            trustManager.checkClientTrusted(x509Certificates, s, socket);
-        }
-
-        @Override
-        public void checkServerTrusted(X509Certificate[] x509Certificates, String s, Socket socket) throws CertificateException {
-            trustManager.checkServerTrusted(x509Certificates, s, socket);
-        }
-
-        @Override
-        public void checkClientTrusted(X509Certificate[] x509Certificates, String s, SSLEngine sslEngine) throws CertificateException {
-            trustManager.checkClientTrusted(x509Certificates, s, sslEngine);
-        }
-
-        @Override
-        public void checkServerTrusted(X509Certificate[] x509Certificates, String s, SSLEngine sslEngine) throws CertificateException {
-            trustManager.checkServerTrusted(x509Certificates, s, sslEngine);
-        }
-
-        @Override
-        public void checkClientTrusted(X509Certificate[] x509Certificates, String s) throws CertificateException {
-            trustManager.checkClientTrusted(x509Certificates, s);
-        }
-
-        @Override
-        public void checkServerTrusted(X509Certificate[] x509Certificates, String s) throws CertificateException {
-            trustManager.checkServerTrusted(x509Certificates, s);
-        }
-
-        @Override
-        public X509Certificate[] getAcceptedIssuers() {
-            return trustManager.getAcceptedIssuers();
-        }
-
-        void reload() {
-            X509ExtendedTrustManager loadedTrustManager = trustConfig.createTrustManager(env);
-            if (loadedTrustManager == null) {
-                this.trustManager = new EmptyX509TrustManager();
-            } else {
-                this.trustManager = loadedTrustManager;
-            }
-        }
-
-        X509ExtendedTrustManager getTrustManager() {
-            return trustManager;
-        }
-    }
-
-    /**
-     * Wraps a key manager and delegates all calls to it. When the key material needs to be reloaded, then the delegate is swapped after
-     * a new one has been loaded
-     */
-    final class ReloadableX509KeyManager extends X509ExtendedKeyManager {
-
-        private volatile X509ExtendedKeyManager keyManager;
+    final class SSLContextHolder {
+        private volatile SSLContext context;
         private final KeyConfig keyConfig;
+        private final TrustConfig trustConfig;
+        private final SSLConfiguration sslConfiguration;
+        private final List<Runnable> reloadListeners;
 
-        ReloadableX509KeyManager(X509ExtendedKeyManager keyManager, KeyConfig keyConfig) {
-            this.keyManager = keyManager == null ? new EmptyKeyManager() : keyManager;
-            this.keyConfig = keyConfig;
-        }
-
-        @Override
-        public String[] getClientAliases(String s, Principal[] principals) {
-            return keyManager.getClientAliases(s, principals);
-        }
-
-        @Override
-        public String chooseClientAlias(String[] strings, Principal[] principals, Socket socket) {
-            return keyManager.chooseClientAlias(strings, principals, socket);
-        }
-
-        @Override
-        public String[] getServerAliases(String s, Principal[] principals) {
-            return keyManager.getServerAliases(s, principals);
-        }
-
-        @Override
-        public String chooseServerAlias(String s, Principal[] principals, Socket socket) {
-            return keyManager.chooseServerAlias(s, principals, socket);
-        }
-
-        @Override
-        public X509Certificate[] getCertificateChain(String s) {
-            return keyManager.getCertificateChain(s);
-        }
-
-        @Override
-        public PrivateKey getPrivateKey(String s) {
-            return keyManager.getPrivateKey(s);
-        }
-
-        @Override
-        public String chooseEngineClientAlias(String[] strings, Principal[] principals, SSLEngine engine) {
-            return keyManager.chooseEngineClientAlias(strings, principals, engine);
-        }
-
-        @Override
-        public String chooseEngineServerAlias(String s, Principal[] principals, SSLEngine engine) {
-            return keyManager.chooseEngineServerAlias(s, principals, engine);
-        }
-
-        void reload() {
-            X509ExtendedKeyManager loadedKeyManager = keyConfig.createKeyManager(env);
-            if (loadedKeyManager == null) {
-                this.keyManager = new EmptyKeyManager();
-            } else {
-                this.keyManager = loadedKeyManager;
-            }
-        }
-
-        // pkg-private accessor for testing
-        X509ExtendedKeyManager getKeyManager() {
-            return keyManager;
-        }
-    }
-
-    /**
-     * A struct for holding the SSLContext and the backing key manager and trust manager
-     */
-    static final class SSLContextHolder {
-
-        private final SSLContext context;
-        private final ReloadableTrustManager trustManager;
-        private final ReloadableX509KeyManager keyManager;
-
-        SSLContextHolder(SSLContext context, ReloadableTrustManager trustManager, ReloadableX509KeyManager keyManager) {
+        SSLContextHolder(SSLContext context, SSLConfiguration sslConfiguration) {
             this.context = context;
-            this.trustManager = trustManager;
-            this.keyManager = keyManager;
+            this.sslConfiguration = sslConfiguration;
+            this.keyConfig = sslConfiguration.keyConfig();
+            this.trustConfig = sslConfiguration.trustConfig();
+            this.reloadListeners = new ArrayList<>();
         }
 
         SSLContext sslContext() {
             return context;
         }
 
-        ReloadableX509KeyManager keyManager() {
-            return keyManager;
-        }
-
-        ReloadableTrustManager trustManager() {
-            return trustManager;
-        }
-
         synchronized void reload() {
-            trustManager.reload();
-            keyManager.reload();
             invalidateSessions(context.getClientSessionContext());
             invalidateSessions(context.getServerSessionContext());
+            reloadSslContext();
+            this.reloadListeners.forEach(Runnable::run);
         }
 
-        /**
-         * Invalidates the sessions in the provided {@link SSLSessionContext}
-         */
-        private static void invalidateSessions(SSLSessionContext sslSessionContext) {
-            Enumeration<byte[]> sessionIds = sslSessionContext.getIds();
-            while (sessionIds.hasMoreElements()) {
-                byte[] sessionId = sessionIds.nextElement();
-                sslSessionContext.getSession(sessionId).invalidate();
+        private void reloadSslContext() {
+            try {
+                X509ExtendedKeyManager loadedKeyManager = keyConfig.createKeyManager(env);
+                X509ExtendedTrustManager loadedTrustManager = trustConfig.createTrustManager(env);
+                loadedTrustManager = wrapWithDiagnostics(loadedTrustManager, sslConfiguration);
+
+                SSLContext loadedSslContext = SSLContext.getInstance(sslContextAlgorithm(sslConfiguration.supportedProtocols()));
+                loadedSslContext.init(new X509ExtendedKeyManager[]{loadedKeyManager},
+                    new X509ExtendedTrustManager[]{loadedTrustManager}, null);
+                supportedCiphers(loadedSslContext.getSupportedSSLParameters().getCipherSuites(), sslConfiguration.cipherSuites(), false);
+                this.context = loadedSslContext;
+            } catch (GeneralSecurityException e) {
+                throw new ElasticsearchException("failed to initialize the SSLContext", e);
+            }
+        }
+
+        public void addReloadListener(Runnable listener) {
+            this.reloadListeners.add(listener);
+        }
+    }
+
+    /**
+     * Invalidates the sessions in the provided {@link SSLSessionContext}
+     */
+    static void invalidateSessions(SSLSessionContext sslSessionContext) {
+        Enumeration<byte[]> sessionIds = sslSessionContext.getIds();
+        while (sessionIds.hasMoreElements()) {
+            byte[] sessionId = sessionIds.nextElement();
+            SSLSession session = sslSessionContext.getSession(sessionId);
+            // an SSLSession could be null as there is no lock while iterating, the session cache
+            // could have evicted a value, the session could be timed out, or the session could
+            // have already been invalidated, which removes the value from the session cache in the
+            // sun implementation
+            if (session != null) {
+                session.invalidate();
             }
         }
     }
 
     /**
-     * This is an empty key manager that is used in case a loaded key manager is null
+     * @return A map of Settings prefix to Settings object
      */
-    private static final class EmptyKeyManager extends X509ExtendedKeyManager {
-
-        @Override
-        public String[] getClientAliases(String s, Principal[] principals) {
-            return new String[0];
-        }
-
-        @Override
-        public String chooseClientAlias(String[] strings, Principal[] principals, Socket socket) {
-            return null;
-        }
-
-        @Override
-        public String[] getServerAliases(String s, Principal[] principals) {
-            return new String[0];
-        }
-
-        @Override
-        public String chooseServerAlias(String s, Principal[] principals, Socket socket) {
-            return null;
-        }
-
-        @Override
-        public X509Certificate[] getCertificateChain(String s) {
-            return new X509Certificate[0];
-        }
-
-        @Override
-        public PrivateKey getPrivateKey(String s) {
-            return null;
-        }
-    }
-
-    /**
-     * This is an empty trust manager that is used in case a loaded trust manager is null
-     */
-    static final class EmptyX509TrustManager extends X509ExtendedTrustManager {
-
-        @Override
-        public void checkClientTrusted(X509Certificate[] x509Certificates, String s, Socket socket) throws CertificateException {
-            throw new CertificateException("no certificates are trusted");
-        }
-
-        @Override
-        public void checkServerTrusted(X509Certificate[] x509Certificates, String s, Socket socket) throws CertificateException {
-            throw new CertificateException("no certificates are trusted");
-        }
-
-        @Override
-        public void checkClientTrusted(X509Certificate[] x509Certificates, String s, SSLEngine sslEngine) throws CertificateException {
-            throw new CertificateException("no certificates are trusted");
-        }
-
-        @Override
-        public void checkServerTrusted(X509Certificate[] x509Certificates, String s, SSLEngine sslEngine) throws CertificateException {
-            throw new CertificateException("no certificates are trusted");
-        }
-
-        @Override
-        public void checkClientTrusted(X509Certificate[] x509Certificates, String s) throws CertificateException {
-            throw new CertificateException("no certificates are trusted");
-        }
-
-        @Override
-        public void checkServerTrusted(X509Certificate[] x509Certificates, String s) throws CertificateException {
-            throw new CertificateException("no certificates are trusted");
-        }
-
-        @Override
-        public X509Certificate[] getAcceptedIssuers() {
-            return new X509Certificate[0];
-        }
-    }
-
-    private static List<Settings> getRealmsSSLSettings(Settings settings) {
-        List<Settings> sslSettings = new ArrayList<>();
-        Settings realmsSettings = settings.getByPrefix(SecurityField.setting("authc.realms."));
-        for (String name : realmsSettings.names()) {
-            Settings realmSSLSettings = realmsSettings.getAsSettings(name).getByPrefix("ssl.");
-            if (realmSSLSettings.isEmpty() == false) {
-                sslSettings.add(realmSSLSettings);
+    private static Map<String, Settings> getRealmsSSLSettings(Settings settings) {
+        final Map<String, Settings> sslSettings = new HashMap<>();
+        final String prefix = "xpack.security.authc.realms.";
+        final Map<String, Settings> settingsByRealmType = settings.getGroups(prefix);
+        settingsByRealmType.forEach((realmType, typeSettings) -> {
+                final Optional<String> nonDottedSetting = typeSettings.keySet().stream().filter(k -> k.indexOf('.') == -1).findAny();
+                if (nonDottedSetting.isPresent()) {
+                    logger.warn("Skipping any SSL configuration from realm [{}{}] because the key [{}] is not in the correct format",
+                        prefix, realmType, nonDottedSetting.get());
+                } else {
+                    typeSettings.getAsGroups().forEach((realmName, realmSettings) -> {
+                        Settings realmSSLSettings = realmSettings.getByPrefix("ssl.");
+                        // Put this even if empty, so that the name will be mapped to the global SSL configuration
+                        sslSettings.put(prefix + realmType + "." + realmName + ".ssl", realmSSLSettings);
+                    });
+                }
             }
-        }
+        );
         return sslSettings;
     }
 
-    private static List<Settings> getTransportProfileSSLSettings(Settings settings) {
-        List<Settings> sslSettings = new ArrayList<>();
+    private static Map<String, Settings> getTransportProfileSSLSettings(Settings settings) {
+        Map<String, Settings> sslSettings = new HashMap<>();
         Map<String, Settings> profiles = settings.getGroups("transport.profiles.", true);
         for (Entry<String, Settings> entry : profiles.entrySet()) {
             Settings profileSettings = entry.getValue().getByPrefix("xpack.security.ssl.");
-            if (profileSettings.isEmpty() == false) {
-                sslSettings.add(profileSettings);
-            }
+            sslSettings.put("transport.profiles." + entry.getKey() + ".xpack.security.ssl", profileSettings);
         }
         return sslSettings;
     }
 
-    public static Settings getHttpTransportSSLSettings(Settings settings) {
+    private Settings getHttpTransportSSLSettings(Settings settings) {
         Settings httpSSLSettings = settings.getByPrefix(XPackSettings.HTTP_SSL_PREFIX);
         if (httpSSLSettings.isEmpty()) {
             return httpSSLSettings;
@@ -852,62 +784,49 @@ public class SSLService extends AbstractComponent {
         return builder.build();
     }
 
-    private static List<Settings> getMonitoringExporterSettings(Settings settings) {
-        List<Settings> sslSettings = new ArrayList<>();
+    public SSLConfiguration getHttpTransportSSLConfiguration() {
+        return getSSLConfiguration(XPackSettings.HTTP_SSL_PREFIX);
+    }
+
+    private static Map<String, Settings> getMonitoringExporterSettings(Settings settings) {
+        Map<String, Settings> sslSettings = new HashMap<>();
         Map<String, Settings> exportersSettings = settings.getGroups("xpack.monitoring.exporters.");
         for (Entry<String, Settings> entry : exportersSettings.entrySet()) {
             Settings exporterSSLSettings = entry.getValue().getByPrefix("ssl.");
-            if (exporterSSLSettings.isEmpty() == false) {
-                sslSettings.add(exporterSSLSettings);
-            }
+            // Put this even if empty, so that the name will be mapped to the global SSL configuration
+            sslSettings.put("xpack.monitoring.exporters." + entry.getKey() + ".ssl", exporterSSLSettings);
         }
         return sslSettings;
+    }
+
+    public SSLConfiguration getSSLConfiguration(String contextName) {
+        if (contextName.endsWith(".")) {
+            contextName = contextName.substring(0, contextName.length() - 1);
+        }
+        final SSLConfiguration configuration = sslConfigurations.get(contextName);
+        if (configuration == null) {
+            logger.warn("Cannot find SSL configuration for context {}. Known contexts are: {}", contextName,
+                Strings.collectionToCommaDelimitedString(sslConfigurations.keySet()));
+        }
+        return configuration;
     }
 
     /**
      * Maps the supported protocols to an appropriate ssl context algorithm. We make an attempt to use the "best" algorithm when
      * possible. The names in this method are taken from the
-     * <a href="http://docs.oracle.com/javase/8/docs/technotes/guides/security/StandardNames.html">JCA Standard Algorithm Name
-     * Documentation for Java 8</a>.
+     * <a href="https://docs.oracle.com/en/java/javase/11/docs/specs/security/standard-names.html#sslcontext-algorithms">Java Security
+     * Standard Algorithm Names Documentation for Java 11</a>.
      */
     private static String sslContextAlgorithm(List<String> supportedProtocols) {
         if (supportedProtocols.isEmpty()) {
-            return "TLSv1.2";
+            throw new IllegalArgumentException("no SSL/TLS protocols have been configured");
         }
-
-        String algorithm = "SSL";
-        for (String supportedProtocol : supportedProtocols) {
-            switch (supportedProtocol) {
-                case "TLSv1.2":
-                    return "TLSv1.2";
-                case "TLSv1.1":
-                    if ("TLSv1.2".equals(algorithm) == false) {
-                        algorithm = "TLSv1.1";
-                    }
-                    break;
-                case "TLSv1":
-                    switch (algorithm) {
-                        case "TLSv1.2":
-                        case "TLSv1.1":
-                            break;
-                        default:
-                            algorithm = "TLSv1";
-                    }
-                    break;
-                case "SSLv3":
-                    switch (algorithm) {
-                        case "SSLv2":
-                        case "SSL":
-                            algorithm = "SSLv3";
-                    }
-                    break;
-                case "SSLv2":
-                case "SSLv2Hello":
-                    break;
-                default:
-                    throw new IllegalArgumentException("found unexpected value in supported protocols: " + supportedProtocol);
+        for (Entry<String, String> entry : ORDERED_PROTOCOL_ALGORITHM_MAP.entrySet()) {
+            if (supportedProtocols.contains(entry.getKey())) {
+                return entry.getValue();
             }
         }
-        return algorithm;
+        throw new IllegalArgumentException("no supported SSL/TLS protocol was found in the configured supported protocols: "
+            + supportedProtocols);
     }
 }
